--- a/app/src/main/res/values-am/strings.xml
+++ b/app/src/main/res/values-am/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">መደመር፤</string>
     <string name="search_dialog_clear">ንጹህ አርገዉ enter የምለዉን ንካዉ፤</string>
     <string name="dialog_close">ዝጋዉ</string>
-    <string name="minusday">1 ቀን መቀነስ፤</string>
+    <string name="trait_layout_date_minusday">1 ቀን መቀነስ፤</string>
     <string name="enter">መጸፊያ ላይ እንተር የምለው ቁልፍ፤</string>
-    <string name="plusday">ያሁኑ ቀን ላይ 1 ጨምር፤</string>
+    <string name="trait_layout_date_plusday">ያሁኑ ቀን ላይ 1 ጨምር፤</string>
     <string name="record">መዝግበዉ፤</string>
     <string name="dialog_ok">ይሁን</string>
     <string name="stop">አቁም</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">ስህተት፤</string>
     <string name="valueless">ዋጋው ከታሰበው በታች ነዉ፤</string>
     <string name="valuemore">ዋጋዉ ከታሰበዉ በላይ ነው</string>
-    <string name="settings_changelog_title">ከመጨረሸ እድሳት ቀይረዉ</string>
+    <string name="changelog_title">ከመጨረሸ እድሳት ቀይረዉ</string>
     <string name="main_toolbar_moveto_no_match">ከዝህ ጋር የሚመሳሰል የለም፤</string>
     <string name="dialog_warning">ማስጠንቀቂያ፤</string>
-    <string name="exporterror">ስውጣ ስህተት አለበት፤</string>
-    <string name="exportcomplete">ማውጣቱ አልቀዋል፤</string>
+    <string name="export_error_general">ስውጣ ስህተት አለበት፤</string>
+    <string name="export_complete">ማውጣቱ አልቀዋል፤</string>
     <string name="profile_person_title">ስም ማስተካከል፤</string>
     <string name="profile_location_title">ቦታ ማስተካከል፤</string>
     <string name="about_title">ስለ፤</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">ሎንግትዩድ</string>
     <string name="profile_get_location">የምገኝበትን ቦታ አስገባዉ</string>
     <string name="ignoreentries">መረጃ የተሰበሰበለት መስመር ደብቅ</string>
-    <string name="dbformat">የመረጃ ማህደር</string>
-    <string name="tableformat">ሰንጠረዥ</string>
-    <string name="filename">የፋይል ስም</string>
+    <string name="export_format_database">የመረጃ ማህደር</string>
+    <string name="export_format_table">ሰንጠረዥ</string>
+    <string name="export_file_name">የፋይል ስም</string>
     <string name="drop1">መረጃ ማሳያ መስመር 1</string>
     <string name="drop2">መረጃ ማሳያ መስመር 2</string>
     <string name="drop3">መረጃ ማሳያ መስመር 3</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">ይበልጣል</string>
     <string name="search_dialog_query_is_less_than">ያንሳል</string>
     <string name="search_results_missing">መፈለግ ውጤት አላስግኘም</string>
-    <string name="importunique">መለያ</string>
-    <string name="importfirst">ዋና አደራደር</string>
-    <string name="importsecond">ሁለተኛ አደራደር</string>
-    <string name="importfields">የሙከራ ማሳ አስገባ</string>
-    <string name="importmsg">እባክህ ጠብቅ</string>
-    <string name="importerror">ማስገባት ላይ ስህተት አላ</string>
-    <string name="importuniqueerror">መለያዉ ተመላልስዋል</string>
+    <string name="import_dialog_unique">መለያ</string>
+    <string name="import_dialog_primary">ዋና አደራደር</string>
+    <string name="import_dialog_secondary">ሁለተኛ አደራደር</string>
+    <string name="import_dialog_title">የሙከራ ማሳ አስገባ</string>
+    <string name="import_dialog_importing">እባክህ ጠብቅ</string>
+    <string name="import_error_general">ማስገባት ላይ ስህተት አላ</string>
+    <string name="import_error_unique">መለያዉ ተመላልስዋል</string>
     <string name="traits_toolbar_add_trait">ጸባይ ጨምር</string>
     <string name="traits_create_format">ፎርማት</string>
     <string name="traits_create_value_default">እንደነበረ</string>
@@ -97,48 +97,48 @@
     <string name="settings_advanced">የረቀቃ አዘጋጃጀት</string>
     <string name="traits_create_categories_text">ሁኔታዎችን በ አ ለይ</string>
     <string name="main_infobar_no_data">መረጃ የለም</string>
-    <string name="noexportcheck">የምወጣ የመረጃ ዓይነት የለም</string>
+    <string name="export_error_missing_format">የምወጣ የመረጃ ዓይነት የለም</string>
     <string name="search_results_dialog_title">የፍለጋ ዉጤት</string>
-    <string name="tips">መግለጫዉን እንድሰራ ኣርገው</string>
+    <string name="preferences_interface_tutorial">መግለጫዉን እንድሰራ ኣርገው</string>
     <string name="cycle">ከመጨረሻ መስመር ወደ ፊት መሄድ ወደሚቀጥለው መጀመሪያ መስመር ይወስዳል</string>
     <string name="useday">ከተለመደው ቀን አቆጣጠር ይልቅ ዓመትን መሰረት ያደረጋ ቀን አቆጣጠር ተጠቀም</string>
-    <string name="columnfail">የሰንጠረዥ ወደ ታች መሄጃ መስመር ያልተፈቀዳ ፍደል አለው</string>
-    <string name="prev">ያለፈው</string>
-    <string name="next">የሚቀጥለው</string>
-    <string name="stored">መረጃው ተቀምጥዋል</string>
+    <string name="import_error_columns">የሰንጠረዥ ወደ ታች መሄጃ መስመር ያልተፈቀዳ ፍደል አለው</string>
+    <string name="tutorial_previous">ያለፈው</string>
+    <string name="tutorial_next">የሚቀጥለው</string>
+    <string name="trait_layout_data_stored">መረጃው ተቀምጥዋል</string>
     <string name="traits_create_optional">አማራጭ</string>
-    <string name="exportmsg">አዉጣው</string>
+    <string name="export_progress">አዉጣው</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">መግለጫ</string>
-    <string name="mhelp1">በፍትለፊቱ በላይኛው የመረጃ ማሳያ መስመር ለእያንዳንዱ ናሙና ተጨማሪ ዳታ ያሳያል</string>
-    <string name="mhelp2">ትልቁ ጥቁር ቀስት ከናሙና ወደ ናሙና ለመሄድ ነው። ትንሹ ሰማያዊ ቀስት ከጠባይ ወደ ጠባይ ይሄዳል።</string>
-    <string name="mhelp3">የላህበት ጠባይ ስነካ እንዲሰሩ የተደረጉ ጠባዮች ይታያሉ።</string>
-    <string name="mhelp4">የመጀመሪያዉና ሁለተኛው ቅደም ተከተል ፍደል ቦታዎች አንድ ዋጋ ለመጀመሪያ ወደታየው ይወስዳል።</string>
-    <string name="mhelp5">ሰርች የሚለው በፊትለፊት በላይኛው የመረጃ መህደር ለመፈለግ ይረዳል።</string>
-    <string name="shelp1">ሲሴቭ ወይም ኤክስ ሌ ኤስ ፋይልን ለማስገባት የሙከራ ቦታዎችን ምረጥ</string>
-    <string name="shelp2">ፋይል ከተመረጣ በሐላ የፋየሉ ሰንጠረዥ ወደ ታች መውረጃ መስመሮች በግራ በኩል ስታዩ ፤ የዳታ አይነትን በስተቀኝ መቀያየር ይቻላል። ፋይል በግደታ 3 የሰንጠረዥ ወደ ታች መሄጃ መስመር መያዝ አለበት፡ መለያ ፤ የመጀመሪያ ቅደምተከተል እና ሁለተኛ ቅደምተከተል።</string>
-    <string name="shelp3">ጠባይ ለመጨመር ወይም አድስ ወደ ውስጥ ለማምጣት ጠባዮችን ተጫን።</string>
-    <string name="shelp4">መረጃ ለመሰብሰብ ዝግጀት፤ ሴታፕ ምረጥ</string>
-    <string name="shelp5">በሴታፕ ሳሌዳ ላይ ፕረሰን መረጃ የሚሰበስብ ስሆን፤ ሎከሽን የሙከራ ቦታ የሚገኝበትን መረጃ ይሰበስባል።</string>
-    <string name="shelp6">መረጃ ከተሰበሰባ ብሃላ ባክበተን በላይኛው በስተግራ በኩል ወደ ዋናዉ ሳሌዳ ያስኬዳል።</string>
-    <string name="thelp1">በሜኑ ላይ ጠባይ መጨመር የሚለው አዲስ ጠባይ ለመፍጠር ነው።</string>
-    <string name="thelp2">የጥባይ ፋይሎችን ለማስገባት፤ የመኑ ቁልፍን በመጫን አስገባ የሚለዉን ምረጥ።</string>
-    <string name="thelp3">ስለ ጠባይ አፈጣጠር ተጨማሪ መረጃ፤ የመሳሪያዉን ማኑዋል ያማክሩ፤</string>
-    <string name="importtraitwarning">ጠባዮች ከመፍጠር በፊት የሙከራ ቦታ ማስገባት ያስፈልጋል፤</string>
-    <string name="nofieldloaded">የሙከራ ቦታ አልቀረበም፤ እባክዎን መረጃ ከመሰብሰብዎ በፊት ቦታዉ እንዲቀርብ ያድርጉ፤</string>
-    <string name="notraitloaded">ጣባዮች የሉም፤</string>
-    <string name="dbreset">የመረጃ ማህደር እንደገና ማስተካከል፤</string>
-    <string name="resetwarning1">በመለሶ ማስተካከል ጊዜ መረጃ ልጠፋ ይችላል፤ ይሁን?</string>
-    <string name="resetwarning2">ይህ ዉሳኔ አይቀየርም፤ መሳሪያው የመራጃ ማህደሩን ካጸዳ ብሃላ መስራት ይትዋል፤ ቢሆንም ለመቀጠል ትፈልጋለህ?</string>
-    <string name="dbbackup">የመረጃ ማህደር፤</string>
-    <string name="resetcomplete">የመረጃ ማህደሩ ጠፍትዋል</string>
-    <string name="dbimport">የመረጃ ማህደሩን አስገባው፤</string>
-    <string name="dbexport">የመረጃ ማህደሩን አውጣው</string>
-    <string name="headerformat">ፎርማት</string>
-    <string name="allcolumns">ሁሉም ቦታዎች የሰንጠረዥ ወደ ታች መሄጃ መስመር፤</string>
-    <string name="alltraits">ሁሉም ጠባዮች፤</string>
+    <string name="tutorial_dialog_title">መግለጫ</string>
+    <string name="tutorial_main_1">በፍትለፊቱ በላይኛው የመረጃ ማሳያ መስመር ለእያንዳንዱ ናሙና ተጨማሪ ዳታ ያሳያል</string>
+    <string name="tutorial_main_2">ትልቁ ጥቁር ቀስት ከናሙና ወደ ናሙና ለመሄድ ነው። ትንሹ ሰማያዊ ቀስት ከጠባይ ወደ ጠባይ ይሄዳል።</string>
+    <string name="tutorial_main_3">የላህበት ጠባይ ስነካ እንዲሰሩ የተደረጉ ጠባዮች ይታያሉ።</string>
+    <string name="tutorial_main_4">የመጀመሪያዉና ሁለተኛው ቅደም ተከተል ፍደል ቦታዎች አንድ ዋጋ ለመጀመሪያ ወደታየው ይወስዳል።</string>
+    <string name="tutorial_main_5">ሰርች የሚለው በፊትለፊት በላይኛው የመረጃ መህደር ለመፈለግ ይረዳል።</string>
+    <string name="tutorial_settings_1">ሲሴቭ ወይም ኤክስ ሌ ኤስ ፋይልን ለማስገባት የሙከራ ቦታዎችን ምረጥ</string>
+    <string name="tutorial_settings_2">ፋይል ከተመረጣ በሐላ የፋየሉ ሰንጠረዥ ወደ ታች መውረጃ መስመሮች በግራ በኩል ስታዩ ፤ የዳታ አይነትን በስተቀኝ መቀያየር ይቻላል። ፋይል በግደታ 3 የሰንጠረዥ ወደ ታች መሄጃ መስመር መያዝ አለበት፡ መለያ ፤ የመጀመሪያ ቅደምተከተል እና ሁለተኛ ቅደምተከተል።</string>
+    <string name="tutorial_settings_3">ጠባይ ለመጨመር ወይም አድስ ወደ ውስጥ ለማምጣት ጠባዮችን ተጫን።</string>
+    <string name="tutorial_settings_4">መረጃ ለመሰብሰብ ዝግጀት፤ ሴታፕ ምረጥ</string>
+    <string name="tutorial_settings_5">በሴታፕ ሳሌዳ ላይ ፕረሰን መረጃ የሚሰበስብ ስሆን፤ ሎከሽን የሙከራ ቦታ የሚገኝበትን መረጃ ይሰበስባል።</string>
+    <string name="tutorial_settings_6">መረጃ ከተሰበሰባ ብሃላ ባክበተን በላይኛው በስተግራ በኩል ወደ ዋናዉ ሳሌዳ ያስኬዳል።</string>
+    <string name="tutorial_traits_1">በሜኑ ላይ ጠባይ መጨመር የሚለው አዲስ ጠባይ ለመፍጠር ነው።</string>
+    <string name="tutorial_traits_2">የጥባይ ፋይሎችን ለማስገባት፤ የመኑ ቁልፍን በመጫን አስገባ የሚለዉን ምረጥ።</string>
+    <string name="tutorial_traits_3">ስለ ጠባይ አፈጣጠር ተጨማሪ መረጃ፤ የመሳሪያዉን ማኑዋል ያማክሩ፤</string>
+    <string name="warning_field_before_traits">ጠባዮች ከመፍጠር በፊት የሙከራ ቦታ ማስገባት ያስፈልጋል፤</string>
+    <string name="warning_field_missing">የሙከራ ቦታ አልቀረበም፤ እባክዎን መረጃ ከመሰብሰብዎ በፊት ቦታዉ እንዲቀርብ ያድርጉ፤</string>
+    <string name="warning_traits_missing">ጣባዮች የሉም፤</string>
+    <string name="database_reset">የመረጃ ማህደር እንደገና ማስተካከል፤</string>
+    <string name="database_reset_warning1">በመለሶ ማስተካከል ጊዜ መረጃ ልጠፋ ይችላል፤ ይሁን?</string>
+    <string name="database_reset_warning2">ይህ ዉሳኔ አይቀየርም፤ መሳሪያው የመራጃ ማህደሩን ካጸዳ ብሃላ መስራት ይትዋል፤ ቢሆንም ለመቀጠል ትፈልጋለህ?</string>
+    <string name="database_dialog_title">የመረጃ ማህደር፤</string>
+    <string name="database_reset_message">የመረጃ ማህደሩ ጠፍትዋል</string>
+    <string name="database_import">የመረጃ ማህደሩን አስገባው፤</string>
+    <string name="database_export">የመረጃ ማህደሩን አውጣው</string>
+    <string name="export_format_title">ፎርማት</string>
+    <string name="export_content_columns_all">ሁሉም ቦታዎች የሰንጠረዥ ወደ ታች መሄጃ መስመር፤</string>
+    <string name="export_content_traits_all">ሁሉም ጠባዮች፤</string>
     <string name="traits_format_photo">ፎቶ፤</string>
     <string name="play">አጫውት፤</string>
     <string name="capture">ማንሳት</string>
@@ -152,8 +152,8 @@
     <string name="fields_load">እንዲቀርብ አድርግ፤</string>
     <string name="traits_options_delete">አጥፋው</string>
     <string name="fields_date_imported">ቀን ገብትዋል፤</string>
-    <string name="exporttraiterror">የሚወጣ መረጃ የለም፤</string>
-    <string name="tipsdesc">መግለጫ እንዲሰራ ትፈልጋለህ? ይህ በረቀቃ አዘገጃጀት ሊለወጥ ይችላል፤</string>
+    <string name="export_error_data_missing">የሚወጣ መረጃ የለም፤</string>
+    <string name="tutorial_dialog_description">መግለጫ እንዲሰራ ትፈልጋለህ? ይህ በረቀቃ አዘገጃጀት ሊለወጥ ይችላል፤</string>
     <string name="dialog_cancel">ታወው</string>
     <string name="rangechime">የመጀመሪያ ቅደምተከተል ስለወጥ ያማሳወቂያ ድምጽ፤</string>
     <string name="traits_create_photo_maximum">የፍቶዎች ብዛት ትልቁ፤</string>
