--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">إضافة</string>
     <string name="search_dialog_clear">إزالة</string>
     <string name="dialog_close">إغلاق</string>
-    <string name="minusday">قبل يوم</string>
+    <string name="trait_layout_date_minusday">قبل يوم</string>
     <string name="enter">إدخال</string>
-    <string name="plusday">بعد يوم</string>
+    <string name="trait_layout_date_plusday">بعد يوم</string>
     <string name="record">تسجيل</string>
     <string name="dialog_ok">موافق</string>
     <string name="stop">إيقاف</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">خطأ</string>
     <string name="valueless">القيمة أقل من الحد الأدنى</string>
     <string name="valuemore">القيمة أكبر من الحد الأقصى</string>
-    <string name="settings_changelog_title">سجل التغييرات</string>
+    <string name="changelog_title">سجل التغييرات</string>
     <string name="main_toolbar_moveto_no_match">لايوجد قيمة مطابقة</string>
     <string name="dialog_warning">تحذير</string>
-    <string name="exporterror">خطأ أثناء التصدير</string>
-    <string name="exportcomplete">تم التصدير</string>
+    <string name="export_error_general">خطأ أثناء التصدير</string>
+    <string name="export_complete">تم التصدير</string>
     <string name="profile_person_title">تحديد الشخص</string>
     <string name="profile_location_title">تحديد الموقع</string>
     <string name="about_title">حول</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">خط الطول</string>
     <string name="profile_get_location">جلب الموقع</string>
     <string name="ignoreentries">إخفاء المدخلات التي سبق جمعها</string>
-    <string name="dbformat">قاعدة بيانات</string>
-    <string name="tableformat">جدول</string>
-    <string name="filename">اسم الملف</string>
+    <string name="export_format_database">قاعدة بيانات</string>
+    <string name="export_format_table">جدول</string>
+    <string name="export_file_name">اسم الملف</string>
     <string name="drop1">عمود المعلومات الأول</string>
     <string name="drop2">عمود المعلومات الثاني</string>
     <string name="drop3">عمود المعلومات الثالث</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">أكبر من</string>
     <string name="search_dialog_query_is_less_than">أصغر من</string>
     <string name="search_results_missing">لم يعد البحث أي نتائج</string>
-    <string name="importunique">معرف فريد</string>
-    <string name="importfirst">ترتيب رئيسي</string>
-    <string name="importsecond">ترتيب ثانوي</string>
-    <string name="importfields">استيراد حقل</string>
-    <string name="importmsg">الرجاء الانتظار...</string>
-    <string name="importerror">خطأ بالاستيراد</string>
-    <string name="importuniqueerror">المعرف الفريد يتضمن تكرارات</string>
+    <string name="import_dialog_unique">معرف فريد</string>
+    <string name="import_dialog_primary">ترتيب رئيسي</string>
+    <string name="import_dialog_secondary">ترتيب ثانوي</string>
+    <string name="import_dialog_title">استيراد حقل</string>
+    <string name="import_dialog_importing">الرجاء الانتظار...</string>
+    <string name="import_error_general">خطأ بالاستيراد</string>
+    <string name="import_error_unique">المعرف الفريد يتضمن تكرارات</string>
     <string name="traits_toolbar_add_trait">أضف سمة</string>
     <string name="traits_create_format">التنسيق</string>
     <string name="traits_create_value_default">افتراضي</string>
@@ -97,48 +97,48 @@
     <string name="settings_advanced">إعدادات متقدمة</string>
     <string name="traits_create_categories_text">افصل العناصر باستخدام /</string>
     <string name="main_infobar_no_data">لايوجد بيانات</string>
-    <string name="noexportcheck">يجب تحديد نوع الاستيراد</string>
+    <string name="export_error_missing_format">يجب تحديد نوع الاستيراد</string>
     <string name="search_results_dialog_title">نتائج البحث</string>
-    <string name="tips">تفعيل الدليل التعليمي</string>
+    <string name="preferences_interface_tutorial">تفعيل الدليل التعليمي</string>
     <string name="cycle">تحرك متقدما من آخر سمة للمدخل السابق إلى السمة الأولى في المدخل التالي</string>
     <string name="useday">استخدم رقم اليوم بالسنة عوض التاريخ</string>
-    <string name="columnfail">أسماء الأعمدة تتضمن محارف غير مسموحة</string>
-    <string name="prev">السابق</string>
-    <string name="next">التالي</string>
-    <string name="stored">تم حفظ البيانات</string>
+    <string name="import_error_columns">أسماء الأعمدة تتضمن محارف غير مسموحة</string>
+    <string name="tutorial_previous">السابق</string>
+    <string name="tutorial_next">التالي</string>
+    <string name="trait_layout_data_stored">تم حفظ البيانات</string>
     <string name="traits_create_optional">اختياري</string>
-    <string name="exportmsg">تصدير...</string>
+    <string name="export_progress">تصدير...</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">دليل تعليمي</string>
-    <string name="mhelp1">أعمدة المعلومات في أعلى الشاشة تظهر بيانات إضافية لكل مدخل. يمكن تغييرها من قائمة الإعداد.</string>
-    <string name="mhelp2">الأسهم الكبيرة السوداء تتنقل ما بين المدخلات، أما الأسهم الصغيرة الزرقاء فتتنقل ما بين السمات.</string>
-    <string name="mhelp3">لائحة من السمات المفعلة تظهر حين يتم النقر على السمة الحالية.</string>
-    <string name="mhelp4">إن المساحات النصية للترتيب الرئيسي والثانوي يمكن استخدامها للانتقال إلى مكان الظهور الأول للقيمة المحددة.</string>
-    <string name="mhelp5">البحث في أعلى الشاشة يسمح باستعلام قاعدة البيانات</string>
-    <string name="shelp1">لتصدير ملف CSV أو XLS، اختر الحقول</string>
-    <string name="shelp2">بعد اختيار الملف، يتم عرض حقول الملف على اليسار ويمكن تحديد أنواع البيانات على اليمين. يجب أن تتضمن الملفات ثلاثة حقول: معرف فريد، ترتيب رئيسي، وترتيب ثانوي</string>
-    <string name="shelp3">لإضافة أو استيراد سمات جديدة، إضغط سمات.</string>
-    <string name="shelp4">للتحضير لجمع البيانات، اختر إعداد.</string>
-    <string name="shelp5">في شاشة الإعداد: الشخص هو اسم الشخص الذي يقوم بجمع البيانات، والموقع يقوم بجمع إحداثيات الحقل، والسمات تسمح بضبط السمات الفعالة، أما أعمدة المعلومات فتظهر معلومات المدخل ضمن السياق على الشاشة الرئيسية.</string>
-    <string name="shelp6">حين يتم استيراد البيانات، يمكن استخدام زر العودة في الزاوية العليا اليسرى للانتقال إلى الشاشة الرئيسية</string>
-    <string name="thelp1">خيار أضف سمة ضمن القائمة ينشيء سمة جديدة. ليس من الممكن استخدام لوحة المفاتيح والدليل التعليمي في ذات الوقت. هنالك تنسيقات مختلفة للسمات متاحة لجمع البيانات.</string>
-    <string name="thelp2">لاستيراد ملفات السمات، إضغط على زر القائمة واختر استيراد.</string>
-    <string name="thelp3">راجع دليل استخدام التطبيق للمزيد من المعلومات حول إنشاء السمات.</string>
-    <string name="importtraitwarning">يجب أن يتم استيراد الحقل قبل أن تستطيع إنشاء السمات.</string>
-    <string name="nofieldloaded">لم يتم تحميل أي حقل حاليا، الرجاء تحميل حقل قبل جمع البيانات</string>
-    <string name="notraitloaded">لا توجد سمات، الرجاء أنشئ سمات قبل جمع البيانات.</string>
-    <string name="dbreset">إعادة تعيين قاعدة البيانات</string>
-    <string name="resetwarning1">سيتم حذف كل البيانات عند إعادة التعيين، هل أنت متأكد؟</string>
-    <string name="resetwarning2">لا يمكن التراجع عن هذه العملية، سيتم الخروج من التطبيق بعد محي قاعدة البيانات. هل لازلت ترغب في المتابعة؟</string>
-    <string name="dbbackup">قاعدة بيانات</string>
-    <string name="resetcomplete">تم حذف قاعدة البيانات</string>
-    <string name="dbimport">استيراد قاعدة البيانات</string>
-    <string name="dbexport">تصدير قاعدة البيانات</string>
-    <string name="headerformat">تنسيق</string>
-    <string name="allcolumns">كل أعمدة الحقل</string>
-    <string name="alltraits">كل السمات</string>
+    <string name="tutorial_dialog_title">دليل تعليمي</string>
+    <string name="tutorial_main_1">أعمدة المعلومات في أعلى الشاشة تظهر بيانات إضافية لكل مدخل. يمكن تغييرها من قائمة الإعداد.</string>
+    <string name="tutorial_main_2">الأسهم الكبيرة السوداء تتنقل ما بين المدخلات، أما الأسهم الصغيرة الزرقاء فتتنقل ما بين السمات.</string>
+    <string name="tutorial_main_3">لائحة من السمات المفعلة تظهر حين يتم النقر على السمة الحالية.</string>
+    <string name="tutorial_main_4">إن المساحات النصية للترتيب الرئيسي والثانوي يمكن استخدامها للانتقال إلى مكان الظهور الأول للقيمة المحددة.</string>
+    <string name="tutorial_main_5">البحث في أعلى الشاشة يسمح باستعلام قاعدة البيانات</string>
+    <string name="tutorial_settings_1">لتصدير ملف CSV أو XLS، اختر الحقول</string>
+    <string name="tutorial_settings_2">بعد اختيار الملف، يتم عرض حقول الملف على اليسار ويمكن تحديد أنواع البيانات على اليمين. يجب أن تتضمن الملفات ثلاثة حقول: معرف فريد، ترتيب رئيسي، وترتيب ثانوي</string>
+    <string name="tutorial_settings_3">لإضافة أو استيراد سمات جديدة، إضغط سمات.</string>
+    <string name="tutorial_settings_4">للتحضير لجمع البيانات، اختر إعداد.</string>
+    <string name="tutorial_settings_5">في شاشة الإعداد: الشخص هو اسم الشخص الذي يقوم بجمع البيانات، والموقع يقوم بجمع إحداثيات الحقل، والسمات تسمح بضبط السمات الفعالة، أما أعمدة المعلومات فتظهر معلومات المدخل ضمن السياق على الشاشة الرئيسية.</string>
+    <string name="tutorial_settings_6">حين يتم استيراد البيانات، يمكن استخدام زر العودة في الزاوية العليا اليسرى للانتقال إلى الشاشة الرئيسية</string>
+    <string name="tutorial_traits_1">خيار أضف سمة ضمن القائمة ينشيء سمة جديدة. ليس من الممكن استخدام لوحة المفاتيح والدليل التعليمي في ذات الوقت. هنالك تنسيقات مختلفة للسمات متاحة لجمع البيانات.</string>
+    <string name="tutorial_traits_2">لاستيراد ملفات السمات، إضغط على زر القائمة واختر استيراد.</string>
+    <string name="tutorial_traits_3">راجع دليل استخدام التطبيق للمزيد من المعلومات حول إنشاء السمات.</string>
+    <string name="warning_field_before_traits">يجب أن يتم استيراد الحقل قبل أن تستطيع إنشاء السمات.</string>
+    <string name="warning_field_missing">لم يتم تحميل أي حقل حاليا، الرجاء تحميل حقل قبل جمع البيانات</string>
+    <string name="warning_traits_missing">لا توجد سمات، الرجاء أنشئ سمات قبل جمع البيانات.</string>
+    <string name="database_reset">إعادة تعيين قاعدة البيانات</string>
+    <string name="database_reset_warning1">سيتم حذف كل البيانات عند إعادة التعيين، هل أنت متأكد؟</string>
+    <string name="database_reset_warning2">لا يمكن التراجع عن هذه العملية، سيتم الخروج من التطبيق بعد محي قاعدة البيانات. هل لازلت ترغب في المتابعة؟</string>
+    <string name="database_dialog_title">قاعدة بيانات</string>
+    <string name="database_reset_message">تم حذف قاعدة البيانات</string>
+    <string name="database_import">استيراد قاعدة البيانات</string>
+    <string name="database_export">تصدير قاعدة البيانات</string>
+    <string name="export_format_title">تنسيق</string>
+    <string name="export_content_columns_all">كل أعمدة الحقل</string>
+    <string name="export_content_traits_all">كل السمات</string>
     <string name="traits_format_photo">صورة</string>
     <string name="play">تشغيل</string>
     <string name="capture">التقط</string>
@@ -152,8 +152,8 @@
     <string name="fields_load">تحميل</string>
     <string name="traits_options_delete">حذف</string>
     <string name="fields_date_imported">تم استيراد التاريخ</string>
-    <string name="exporttraiterror">لا يوجد بيانات ليتم تصديرها</string>
-    <string name="tipsdesc">هل ترغب في تفعيل الدليل التعليمي؟ هذا الإعداد يمكن تغييره ضمن الإعدادات المتقدمة.</string>
+    <string name="export_error_data_missing">لا يوجد بيانات ليتم تصديرها</string>
+    <string name="tutorial_dialog_description">هل ترغب في تفعيل الدليل التعليمي؟ هذا الإعداد يمكن تغييره ضمن الإعدادات المتقدمة.</string>
     <string name="dialog_cancel">إلغاء</string>
     <string name="rangechime">صوت التنبيه عند تغيير الترتيب الأساسي</string>
     <string name="traits_create_photo_maximum">العدد الأقصى للصور الملتقطة</string>
