--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">Hinzufuegen</string>
     <string name="search_dialog_clear">Löschen</string>
     <string name="dialog_close">Schliessen</string>
-    <string name="minusday">- 1 Tag</string>
+    <string name="trait_layout_date_minusday">- 1 Tag</string>
     <string name="enter">Eingabe</string>
-    <string name="plusday">+ 1 Tag</string>
+    <string name="trait_layout_date_plusday">+ 1 Tag</string>
     <string name="record">Aufnahme</string>
     <string name="dialog_ok">OK</string>
     <string name="stop">Stop</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">Fehler</string>
     <string name="valueless">Der Wert ist kleiner als das vorgegebene Minimum</string>
     <string name="valuemore">Der Wert ist grösser als das vorgegebene Maximum</string>
-    <string name="settings_changelog_title">Änderungsprotokoll</string>
+    <string name="changelog_title">Änderungsprotokoll</string>
     <string name="main_toolbar_moveto_no_match">Kein uebereinstimmender Wert gefunden</string>
     <string name="dialog_warning">Warnung</string>
-    <string name="exporterror">Fehler während dem Export</string>
-    <string name="exportcomplete">Export komplett</string>
+    <string name="export_error_general">Fehler während dem Export</string>
+    <string name="export_complete">Export komplett</string>
     <string name="profile_person_title">Person bestimmen</string>
     <string name="profile_location_title">Standort (Koordinaten) bestimmen</string>
     <string name="about_title">Information</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">Längengrad</string>
     <string name="profile_get_location">Standort bestimmen (GPS Koordinaten)</string>
     <string name="ignoreentries">Ignoriere Einträge die bereits Daten enthalten</string>
-    <string name="dbformat">Datenbank</string>
-    <string name="tableformat">Tabelle</string>
-    <string name="filename">Dateiname</string>
+    <string name="export_format_database">Datenbank</string>
+    <string name="export_format_table">Tabelle</string>
+    <string name="export_file_name">Dateiname</string>
     <string name="drop1">InfoBar1</string>
     <string name="drop2">InfoBar2</string>
     <string name="drop3">InfoBar3</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">ist mehr als</string>
     <string name="search_dialog_query_is_less_than">ist weniger als</string>
     <string name="search_results_missing">Die Suche hat kein Resultat ergeben</string>
-    <string name="importunique">eindeutiges Zuordnungsmerkmal</string>
-    <string name="importfirst">Erste Ordung</string>
-    <string name="importsecond">Zweite Ordnung</string>
-    <string name="importfields">Feldinformationen importieren</string>
-    <string name="importmsg">Bitte warten...</string>
-    <string name="importerror">Fehler beim Importieren</string>
-    <string name="importuniqueerror">Eindeutiges Zuordnungsmerkmal kommt mehr als nur einmal vor</string>
+    <string name="import_dialog_unique">eindeutiges Zuordnungsmerkmal</string>
+    <string name="import_dialog_primary">Erste Ordung</string>
+    <string name="import_dialog_secondary">Zweite Ordnung</string>
+    <string name="import_dialog_title">Feldinformationen importieren</string>
+    <string name="import_dialog_importing">Bitte warten...</string>
+    <string name="import_error_general">Fehler beim Importieren</string>
+    <string name="import_error_unique">Eindeutiges Zuordnungsmerkmal kommt mehr als nur einmal vor</string>
     <string name="traits_toolbar_add_trait">Merkmal hinzufügen</string>
     <string name="traits_create_format">Format</string>
     <string name="traits_create_value_default">Vorgegeben</string>
@@ -97,48 +97,48 @@
     <string name="settings_advanced">Weitere Einstellungen</string>
     <string name="traits_create_categories_text">Separieren Sie Begriffe mit /</string>
     <string name="main_infobar_no_data">Keine Daten vorhanden</string>
-    <string name="noexportcheck">Exportformat muss ausgewählt werden</string>
+    <string name="export_error_missing_format">Exportformat muss ausgewählt werden</string>
     <string name="search_results_dialog_title">Suchresultat</string>
-    <string name="tips">Anzeigen des Tutorials aktivieren</string>
+    <string name="preferences_interface_tutorial">Anzeigen des Tutorials aktivieren</string>
     <string name="cycle">Durch drücken des Pfeils vorwärts, gelangt man vom letzten Merkmal zum ersten Merkmal der nächsten Einheit (z.B. nächsten Versuchsparzelle)</string>
     <string name="useday">Verwende den aktuellen Tag im Jahr anstelle des Datums (z.B. 40 anstelle von 9. Februar)</string>
-    <string name="columnfail">Der Name der Spalte enthält unerlaubte Zeichen</string>
-    <string name="prev">Vorangehend</string>
-    <string name="next">Nächste(r)</string>
-    <string name="stored">Daten wurden gespeichert</string>
+    <string name="import_error_columns">Der Name der Spalte enthält unerlaubte Zeichen</string>
+    <string name="tutorial_previous">Vorangehend</string>
+    <string name="tutorial_next">Nächste(r)</string>
+    <string name="trait_layout_data_stored">Daten wurden gespeichert</string>
     <string name="traits_create_optional">Optional</string>
-    <string name="exportmsg">Exportieren...</string>
+    <string name="export_progress">Exportieren...</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">Tutorial</string>
-    <string name="mhelp1">The InfoBars oben im Bildschirm enthalten weitere Information für jeden Eintrag (z.B. Pedigree Information). Welche Information in den 3 Infobars angezeigt werden soll kann unter Einstellung bestimmt werden.</string>
-    <string name="mhelp2">Die grossen schwarzen Pfeile werden gebraucht um von einer Versuchsparzelle zur nächsten zu gelangen. Die kleinen blauen Pfeile dienen zur Navigation zwischen verschiedenen Merkmale.</string>
-    <string name="mhelp3">Eine Liste aller ausgewählten Merkmale erscheint wenn man auf das angezeigte Merkmal drückt.</string>
-    <string name="mhelp4">Die zwei Textboxen in der Mitte des Bildschirmes (erste und zweite Ordnung) können benutzt werden um zu einer spezifischen Versuchsparzelle zu navigieren. Sollte die Versuchsparzelle mehr als einmal im Experiment enthalten sein, navigiert die Applikation zum ersten Vorkommen.</string>
-    <string name="mhelp5">Suchen erlaubt die Durchsuchung der Datenbank.</string>
-    <string name="shelp1">Um eine CSV oder XLS Datei zu importieren, wählen Sie Felder.</string>
-    <string name="shelp2">Nachdem eine Datei für den Import gewählt wurde sind die Spalten der Datei links ersichtlich. Der Datentyp kann rechts konfiguriert werden. Dateien müssen mindestens drei Spalten enthalten: eindeutiges Zuordnungsmerkmal, erste Ordnung und sekundäre Ordnung.</string>
-    <string name="shelp3">Um neue Merkmale hinzuzufügen, drücken Sie Merkmale.</string>
-    <string name="shelp4">Bevor Sie mit der Datensammlung beginne, wählen Sie Einstellung.</string>
-    <string name="shelp5">Unter Einstellungen: Person ist der Name der Person die die Daten sammelt, Ort sind die genauen Koordinaten des Feldes, unter Merkmale kann man die Eigenschaften eines Merkmales beschreiben und auswählen. Die InfoBars werden benutzt um weitere Information bezüglich Feld, Pedigree (Stammbaum) etc. anzuzeigen.</string>
-    <string name="shelp6">Durch drücken des Rückwärtspfeiles in der oberen linken Ecke gelangt man zum Hauptbildschirm (sofern Daten importiert wurden).</string>
-    <string name="thelp1">Neue Merkmale können kreiert werden indem man Merkmal Hinzufügen im Menü anwählt.</string>
-    <string name="thelp2">Um Dateien mit Merkmalen zu importieren, drücken Sie Menu und wählen Sie Import</string>
-    <string name="thelp3">Konsultieren Sie die Applikationsanleitungen um mehr über die Erstellung von Merkmalen in der Applikation zu erfahren</string>
-    <string name="importtraitwarning">Eine Felddatei muss importiert werden bevor Merkmal erstellt werden können.</string>
-    <string name="nofieldloaded">Es wurde keine Felddatei importiert. Bitte importieren Sie zuerst die Datei mit allen Informationen bezüglich des Feldes bevor Sie mit der Datenerfassung beginnen.</string>
-    <string name="notraitloaded">Es existieren keine Merkmale. Bitte erstellen Sie Merkmale bevor Sie mit der Datenerfassung beginnen.</string>
-    <string name="dbreset">Datenbank zurücksetzen</string>
-    <string name="resetwarning1">Alle Daten werden gelöscht beim Zurücksetzen der Datenbank. Sind Sie sicher?</string>
-    <string name="resetwarning2">Dieser Vorgang kann nicht rückgängig gemacht werden. Die Applikation wird gestoppt nach dem die Datenbank gelöscht wurde. Wollen Sie den Vorgang trotzdem fortsetzen?</string>
-    <string name="dbbackup">Datenbank</string>
-    <string name="resetcomplete">Datenbank wurde gelöscht</string>
-    <string name="dbimport">Datenbank importieren</string>
-    <string name="dbexport">Datenbank exportieren</string>
-    <string name="headerformat">Format</string>
-    <string name="allcolumns">Alle Spalten der Datei</string>
-    <string name="alltraits">Alle Merkmale</string>
+    <string name="tutorial_dialog_title">Tutorial</string>
+    <string name="tutorial_main_1">The InfoBars oben im Bildschirm enthalten weitere Information für jeden Eintrag (z.B. Pedigree Information). Welche Information in den 3 Infobars angezeigt werden soll kann unter Einstellung bestimmt werden.</string>
+    <string name="tutorial_main_2">Die grossen schwarzen Pfeile werden gebraucht um von einer Versuchsparzelle zur nächsten zu gelangen. Die kleinen blauen Pfeile dienen zur Navigation zwischen verschiedenen Merkmale.</string>
+    <string name="tutorial_main_3">Eine Liste aller ausgewählten Merkmale erscheint wenn man auf das angezeigte Merkmal drückt.</string>
+    <string name="tutorial_main_4">Die zwei Textboxen in der Mitte des Bildschirmes (erste und zweite Ordnung) können benutzt werden um zu einer spezifischen Versuchsparzelle zu navigieren. Sollte die Versuchsparzelle mehr als einmal im Experiment enthalten sein, navigiert die Applikation zum ersten Vorkommen.</string>
+    <string name="tutorial_main_5">Suchen erlaubt die Durchsuchung der Datenbank.</string>
+    <string name="tutorial_settings_1">Um eine CSV oder XLS Datei zu importieren, wählen Sie Felder.</string>
+    <string name="tutorial_settings_2">Nachdem eine Datei für den Import gewählt wurde sind die Spalten der Datei links ersichtlich. Der Datentyp kann rechts konfiguriert werden. Dateien müssen mindestens drei Spalten enthalten: eindeutiges Zuordnungsmerkmal, erste Ordnung und sekundäre Ordnung.</string>
+    <string name="tutorial_settings_3">Um neue Merkmale hinzuzufügen, drücken Sie Merkmale.</string>
+    <string name="tutorial_settings_4">Bevor Sie mit der Datensammlung beginne, wählen Sie Einstellung.</string>
+    <string name="tutorial_settings_5">Unter Einstellungen: Person ist der Name der Person die die Daten sammelt, Ort sind die genauen Koordinaten des Feldes, unter Merkmale kann man die Eigenschaften eines Merkmales beschreiben und auswählen. Die InfoBars werden benutzt um weitere Information bezüglich Feld, Pedigree (Stammbaum) etc. anzuzeigen.</string>
+    <string name="tutorial_settings_6">Durch drücken des Rückwärtspfeiles in der oberen linken Ecke gelangt man zum Hauptbildschirm (sofern Daten importiert wurden).</string>
+    <string name="tutorial_traits_1">Neue Merkmale können kreiert werden indem man Merkmal Hinzufügen im Menü anwählt.</string>
+    <string name="tutorial_traits_2">Um Dateien mit Merkmalen zu importieren, drücken Sie Menu und wählen Sie Import</string>
+    <string name="tutorial_traits_3">Konsultieren Sie die Applikationsanleitungen um mehr über die Erstellung von Merkmalen in der Applikation zu erfahren</string>
+    <string name="warning_field_before_traits">Eine Felddatei muss importiert werden bevor Merkmal erstellt werden können.</string>
+    <string name="warning_field_missing">Es wurde keine Felddatei importiert. Bitte importieren Sie zuerst die Datei mit allen Informationen bezüglich des Feldes bevor Sie mit der Datenerfassung beginnen.</string>
+    <string name="warning_traits_missing">Es existieren keine Merkmale. Bitte erstellen Sie Merkmale bevor Sie mit der Datenerfassung beginnen.</string>
+    <string name="database_reset">Datenbank zurücksetzen</string>
+    <string name="database_reset_warning1">Alle Daten werden gelöscht beim Zurücksetzen der Datenbank. Sind Sie sicher?</string>
+    <string name="database_reset_warning2">Dieser Vorgang kann nicht rückgängig gemacht werden. Die Applikation wird gestoppt nach dem die Datenbank gelöscht wurde. Wollen Sie den Vorgang trotzdem fortsetzen?</string>
+    <string name="database_dialog_title">Datenbank</string>
+    <string name="database_reset_message">Datenbank wurde gelöscht</string>
+    <string name="database_import">Datenbank importieren</string>
+    <string name="database_export">Datenbank exportieren</string>
+    <string name="export_format_title">Format</string>
+    <string name="export_content_columns_all">Alle Spalten der Datei</string>
+    <string name="export_content_traits_all">Alle Merkmale</string>
     <string name="traits_format_photo">Foto</string>
     <string name="play">Audio abspielen</string>
     <string name="capture">Foto erfassen</string>
@@ -152,8 +152,8 @@
     <string name="fields_load">Laden</string>
     <string name="traits_options_delete">Löschen</string>
     <string name="fields_date_imported">Datum importiert</string>
-    <string name="exporttraiterror">Keine Daten vorhanden zum Exportieren</string>
-    <string name="tipsdesc">Wollen sie das Tutorial aktivieren? Diese Einstellung kann unter Weiteren Einstellungen geändert werden.</string>
+    <string name="export_error_data_missing">Keine Daten vorhanden zum Exportieren</string>
+    <string name="tutorial_dialog_description">Wollen sie das Tutorial aktivieren? Diese Einstellung kann unter Weiteren Einstellungen geändert werden.</string>
     <string name="dialog_cancel">Abbrechen</string>
     <string name="rangechime">Notifikationsgeräusch ein beim Wechsel der ersten Ordnung (ein Geräusch macht den Nutzer darauf aufmerksam, dass die letzte Versuchsparzelle in einer Reihe (erste Ordnung) erreicht wurde und die nächste Parzelle in der nächsten Reihe liegt.)</string>
     <string name="traits_create_photo_maximum">Maximale Anzahl an Fotos</string>
