--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">ajouter</string>
     <string name="search_dialog_clear">effacer</string>
     <string name="dialog_close">fermer</string>
-    <string name="minusday">-1 Jour</string>
+    <string name="trait_layout_date_minusday">-1 Jour</string>
     <string name="enter">valider</string>
-    <string name="plusday">+1 jour</string>
+    <string name="trait_layout_date_plusday">+1 jour</string>
     <string name="record">enregistrer</string>
     <string name="dialog_ok">ok</string>
     <string name="stop">stop</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">erreur</string>
     <string name="valueless">la valeur est inférieure au minimum qui a été défini</string>
     <string name="valuemore">la valeur est supérieure au maximum qui a été défini</string>
-    <string name="settings_changelog_title">journal des modifications</string>
+    <string name="changelog_title">journal des modifications</string>
     <string name="main_toolbar_moveto_no_match">aune valeur associée</string>
     <string name="dialog_warning">avertissement</string>
-    <string name="exporterror">"erreur pendant l'export"</string>
-    <string name="exportcomplete">export terminé</string>
+    <string name="export_error_general">"erreur pendant l'export"</string>
+    <string name="export_complete">export terminé</string>
     <string name="profile_person_title">définir la personne</string>
     <string name="profile_location_title">définir la localisation</string>
     <string name="about_title">à propos</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">longitude</string>
     <string name="profile_get_location">importer les coordonnées géographiques</string>
     <string name="ignoreentries">cacher les données déjà existantes</string>
-    <string name="dbformat">base de données</string>
-    <string name="tableformat">tableau</string>
-    <string name="filename">nom du fichier</string>
+    <string name="export_format_database">base de données</string>
+    <string name="export_format_table">tableau</string>
+    <string name="export_file_name">nom du fichier</string>
     <string name="drop1">InfoBar 1</string>
     <string name="drop2">InfoBar 2</string>
     <string name="drop3">InfoBar 3</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">est supérieur à</string>
     <string name="search_dialog_query_is_less_than">est inférieur à</string>
     <string name="search_results_missing">aucun résultat trouvé</string>
-    <string name="importunique">identifiant unique</string>
-    <string name="importfirst">premier ordre</string>
-    <string name="importsecond">deuxième ordre</string>
-    <string name="importfields">"importer l'essai"</string>
-    <string name="importmsg">veuillez patienter</string>
-    <string name="importerror">"erreur d'importation"</string>
-    <string name="importuniqueerror">"l'identifiant unique contient des doublons"</string>
+    <string name="import_dialog_unique">identifiant unique</string>
+    <string name="import_dialog_primary">premier ordre</string>
+    <string name="import_dialog_secondary">deuxième ordre</string>
+    <string name="import_dialog_title">"importer l'essai"</string>
+    <string name="import_dialog_importing">veuillez patienter</string>
+    <string name="import_error_general">"erreur d'importation"</string>
+    <string name="import_error_unique">"l'identifiant unique contient des doublons"</string>
     <string name="traits_toolbar_add_trait">ajouter un caractère</string>
     <string name="traits_create_format">format</string>
     <string name="traits_create_value_default">défaut</string>
@@ -97,48 +97,48 @@
     <string name="settings_advanced">paramètres avancés</string>
     <string name="traits_create_categories_text">séparer les catégories par un /</string>
     <string name="main_infobar_no_data">aucune donnée</string>
-    <string name="noexportcheck">"le format d'export doit être sélectionné"</string>
+    <string name="export_error_missing_format">"le format d'export doit être sélectionné"</string>
     <string name="search_results_dialog_title">chercher les résultats</string>
-    <string name="tips">activer le tutorial</string>
+    <string name="preferences_interface_tutorial">activer le tutorial</string>
     <string name="cycle">"passer au premier caractère de l'entrée suivante"</string>
     <string name="useday">"remplacer la date par le numéro du jour de l'année"</string>
-    <string name="columnfail">les noms de colonnes contiennent des caractères spéciaux</string>
-    <string name="prev">précédent</string>
-    <string name="next">suivant</string>
-    <string name="stored">les données ont été sauvegardées</string>
+    <string name="import_error_columns">les noms de colonnes contiennent des caractères spéciaux</string>
+    <string name="tutorial_previous">précédent</string>
+    <string name="tutorial_next">suivant</string>
+    <string name="trait_layout_data_stored">les données ont été sauvegardées</string>
     <string name="traits_create_optional">optionnel</string>
-    <string name="exportmsg">export en cours</string>
+    <string name="export_progress">export en cours</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">tutoriel</string>
-    <string name="mhelp1">"Les InfoBars au sommet de l'écran présentent des informations supplémentaires pour chaque entrée. Elles peuvent être modifiées dans le menu Configuration."</string>
-    <string name="mhelp2">Les grandes flèches noires bougent entre les entrées. Les petites flèches bleues bougent entre les caractères.</string>
-    <string name="mhelp3">la liste des caractères disponibles apparaît lorsque vous cliquez sur le caractère actif.</string>
-    <string name="mhelp4">"Les champs de texte de premier et de second ordre peuvent être utilisés pour trouver la première occurrence d'une valeur donnée."</string>
-    <string name="mhelp5">"Recherche au sommet de l'écran lance des requêtes dans la base de données."</string>
-    <string name="shelp1">Pour importer un fichier CSV ou XLS, sélectionner Essais.</string>
-    <string name="shelp2">Après avoir sélectionner un fichier, les colonnes du fichier sont listées sur la gauche et le type de données peut être configuré sur la droite. Les fichiers doivent contenir trois colonnes: un identifiant unique, un premier ordre et un second ordre.</string>
-    <string name="shelp3">Pour ajouter ou importer de nouveaux caractères, cliquez sur Caractères.</string>
-    <string name="shelp4">Pour préparer la collecte de données, définir Configuration.</string>
-    <string name="shelp5">"Sur l'écran de Configuration: Personne est le nom de la personne qui collecte les données, Localisation renseigne les coordonnées de l'essai, Caractères d'activer/désactiver des caractères, et InfoBars affiche les informations sur les entrées sur l'écran principal."</string>
-    <string name="shelp6">"Une fois que les données sont importées, le bouton de retour dans l'angle supérieur gauche permet de revenir vers l'écran principal."</string>
-    <string name="thelp1">"Ajouter Caractère dans le menu créé un nouveau caractère. Il n'est pas possible d'utiliser le clavier et le tutoriel en même temps. Différents formats de caractère sont disponibles pour la collecte des données."</string>
-    <string name="thelp2">Pour importer des fichiers de caractère, cliquez sur le bouton menu et choisir Importer.</string>
-    <string name="thelp3">Consulter le manuel pour des informations supplémentaires sur la création de caractères.</string>
-    <string name="importtraitwarning">un essai doit être importé avant de définir les caractères.</string>
-    <string name="nofieldloaded">"Aucun essai n'a été chargé. Veuillez charger un essai avant de collecter les données."</string>
-    <string name="notraitloaded">"Aucun caractère n'a été défini. Veuillez définir les caractères avant de collecter les données."</string>
-    <string name="dbreset">réinitialiser la base de données</string>
-    <string name="resetwarning1">Toutes les données seront supprimées lors de la réinitialisation. Etes-vous sûr(e)?</string>
-    <string name="resetwarning2">"Cette action est irréversible. L'application fermera après avoir effacé la base de données. Voulez-vous continuer?"</string>
-    <string name="dbbackup">Base de données</string>
-    <string name="resetcomplete">la base de données a été supprimée</string>
-    <string name="dbimport">Importer la Base de données</string>
-    <string name="dbexport">Exporter la Base de données</string>
-    <string name="headerformat">Format</string>
-    <string name="allcolumns">"Toutes les colonnes de l'essai"</string>
-    <string name="alltraits">tous les caractères</string>
+    <string name="tutorial_dialog_title">tutoriel</string>
+    <string name="tutorial_main_1">"Les InfoBars au sommet de l'écran présentent des informations supplémentaires pour chaque entrée. Elles peuvent être modifiées dans le menu Configuration."</string>
+    <string name="tutorial_main_2">Les grandes flèches noires bougent entre les entrées. Les petites flèches bleues bougent entre les caractères.</string>
+    <string name="tutorial_main_3">la liste des caractères disponibles apparaît lorsque vous cliquez sur le caractère actif.</string>
+    <string name="tutorial_main_4">"Les champs de texte de premier et de second ordre peuvent être utilisés pour trouver la première occurrence d'une valeur donnée."</string>
+    <string name="tutorial_main_5">"Recherche au sommet de l'écran lance des requêtes dans la base de données."</string>
+    <string name="tutorial_settings_1">Pour importer un fichier CSV ou XLS, sélectionner Essais.</string>
+    <string name="tutorial_settings_2">Après avoir sélectionner un fichier, les colonnes du fichier sont listées sur la gauche et le type de données peut être configuré sur la droite. Les fichiers doivent contenir trois colonnes: un identifiant unique, un premier ordre et un second ordre.</string>
+    <string name="tutorial_settings_3">Pour ajouter ou importer de nouveaux caractères, cliquez sur Caractères.</string>
+    <string name="tutorial_settings_4">Pour préparer la collecte de données, définir Configuration.</string>
+    <string name="tutorial_settings_5">"Sur l'écran de Configuration: Personne est le nom de la personne qui collecte les données, Localisation renseigne les coordonnées de l'essai, Caractères d'activer/désactiver des caractères, et InfoBars affiche les informations sur les entrées sur l'écran principal."</string>
+    <string name="tutorial_settings_6">"Une fois que les données sont importées, le bouton de retour dans l'angle supérieur gauche permet de revenir vers l'écran principal."</string>
+    <string name="tutorial_traits_1">"Ajouter Caractère dans le menu créé un nouveau caractère. Il n'est pas possible d'utiliser le clavier et le tutoriel en même temps. Différents formats de caractère sont disponibles pour la collecte des données."</string>
+    <string name="tutorial_traits_2">Pour importer des fichiers de caractère, cliquez sur le bouton menu et choisir Importer.</string>
+    <string name="tutorial_traits_3">Consulter le manuel pour des informations supplémentaires sur la création de caractères.</string>
+    <string name="warning_field_before_traits">un essai doit être importé avant de définir les caractères.</string>
+    <string name="warning_field_missing">"Aucun essai n'a été chargé. Veuillez charger un essai avant de collecter les données."</string>
+    <string name="warning_traits_missing">"Aucun caractère n'a été défini. Veuillez définir les caractères avant de collecter les données."</string>
+    <string name="database_reset">réinitialiser la base de données</string>
+    <string name="database_reset_warning1">Toutes les données seront supprimées lors de la réinitialisation. Etes-vous sûr(e)?</string>
+    <string name="database_reset_warning2">"Cette action est irréversible. L'application fermera après avoir effacé la base de données. Voulez-vous continuer?"</string>
+    <string name="database_dialog_title">Base de données</string>
+    <string name="database_reset_message">la base de données a été supprimée</string>
+    <string name="database_import">Importer la Base de données</string>
+    <string name="database_export">Exporter la Base de données</string>
+    <string name="export_format_title">Format</string>
+    <string name="export_content_columns_all">"Toutes les colonnes de l'essai"</string>
+    <string name="export_content_traits_all">tous les caractères</string>
     <string name="traits_format_photo">photo</string>
     <string name="play">play</string>
     <string name="capture">capturer</string>
@@ -152,8 +152,8 @@
     <string name="fields_load">charger</string>
     <string name="traits_options_delete">supprimer</string>
     <string name="fields_date_imported">Données importées</string>
-    <string name="exporttraiterror">aucune données à exporter</string>
-    <string name="tipsdesc">Voulez-vous activer le tutoriel? Cette configuration peut être modifiée dans Paramètres Avancés.</string>
+    <string name="export_error_data_missing">aucune données à exporter</string>
+    <string name="tutorial_dialog_description">Voulez-vous activer le tutoriel? Cette configuration peut être modifiée dans Paramètres Avancés.</string>
     <string name="dialog_cancel">Annuler</string>
     <string name="rangechime">"Son pour prévenir d'un changement de premier ordre."</string>
     <string name="traits_create_photo_maximum">nombre maximum de photos</string>
