--- a/app/src/main/res/values-om-rET/strings.xml
+++ b/app/src/main/res/values-om-rET/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">"Ida'i"</string>
     <string name="search_dialog_clear">Balleessi</string>
     <string name="dialog_close">Cufi</string>
-    <string name="minusday">"Guyyaa tokko hir'isi"</string>
+    <string name="trait_layout_date_minusday">"Guyyaa tokko hir'isi"</string>
     <string name="enter">barreefama booda as tuqi</string>
-    <string name="plusday">Guyya tokko itti dabali</string>
+    <string name="trait_layout_date_plusday">Guyya tokko itti dabali</string>
     <string name="record">Waraabuu</string>
     <string name="dialog_ok">Eeyyeee</string>
     <string name="stop">Dhaabi</string>
@@ -30,8 +30,8 @@
     <string name="valuemore">Gatiin isaa waan eegamu irra caala</string>
     <string name="main_toolbar_moveto_no_match">Kan kanaan wal fakaatu hin jiru.</string>
     <string name="dialog_warning">Ofeegannoo</string>
-    <string name="exporterror">Baasuf dogoggora qaba</string>
-    <string name="exportcomplete">Baasun raawwatame</string>
+    <string name="export_error_general">Baasuf dogoggora qaba</string>
+    <string name="export_complete">Baasun raawwatame</string>
     <string name="profile_person_title">Maqaa qopeessi</string>
     <string name="profile_location_title">Iddo isaa qopessi</string>
     <string name="about_title">"Waa'ee"</string>
@@ -47,9 +47,9 @@
     <string name="none">Hinjiru</string>
     <string name="profile_get_location">Iddo galchi</string>
     <string name="ignoreentries">Ideeffanoo guurame dhoksi</string>
-    <string name="dbformat">Kusaa odeeffanoo</string>
-    <string name="tableformat">Gabatee</string>
-    <string name="filename">Maqaa faayilii</string>
+    <string name="export_format_database">Kusaa odeeffanoo</string>
+    <string name="export_format_table">Gabatee</string>
+    <string name="export_file_name">Maqaa faayilii</string>
     <string name="drop1">Mallattoo ideeffannoo1</string>
     <string name="drop2">Mallattoo ideeffannoo2</string>
     <string name="traits_create_trait">Amala</string>
@@ -60,11 +60,11 @@
     <string name="search_dialog_query_is_more_than">ni caala</string>
     <string name="search_dialog_query_is_less_than">"ni hir'ata"</string>
     <string name="search_results_missing">barbaaduun deebi hin finne</string>
-    <string name="importunique">adda baasaa dhuunfaa</string>
-    <string name="importfields">Iddoo biraatii galchuu</string>
-    <string name="importmsg">Eegi</string>
-    <string name="importerror">Galchuurratti dogogora qaba</string>
-    <string name="importuniqueerror">"Maqaan dhuunfa deddeebi'e"</string>
+    <string name="import_dialog_unique">adda baasaa dhuunfaa</string>
+    <string name="import_dialog_title">Iddoo biraatii galchuu</string>
+    <string name="import_dialog_importing">Eegi</string>
+    <string name="import_error_general">Galchuurratti dogogora qaba</string>
+    <string name="import_error_unique">"Maqaan dhuunfa deddeebi'e"</string>
     <string name="traits_toolbar_add_trait">Amala dabali</string>
     <string name="traits_create_format">Haala itti baasuu barbaaddu</string>
     <string name="traits_create_value_default">Akkuma jirutti</string>
@@ -91,47 +91,47 @@
     <string name="settings_advanced">"Haala ittin jijiiramu ol'aanaa"</string>
     <string name="traits_create_categories_text">Wantooota kanaan adda baasi a /</string>
     <string name="main_infobar_no_data">Daatan hin jiru</string>
-    <string name="noexportcheck">"Wanti ba'u filatamuu qaba"</string>
+    <string name="export_error_missing_format">"Wanti ba'u filatamuu qaba"</string>
     <string name="search_results_dialog_title">Debee barabaacha godhamee</string>
-    <string name="tips">"Ibsi akka mul'atu taasis"</string>
+    <string name="preferences_interface_tutorial">"Ibsi akka mul'atu taasis"</string>
     <string name="cycle">Dhumarratti bakka jirturra gara jalqaba itti aanutti darbi</string>
     <string name="useday">"Guyyaa odoo hin ta'in guyya waggaa fayyadami"</string>
-    <string name="columnfail">"maqaan sarara gad bu'uu seera barreefamaa hin hordofne"</string>
-    <string name="prev">Kan darbe</string>
-    <string name="next">Kan itti aanu</string>
-    <string name="stored">"Daatan olka'amee jira"</string>
+    <string name="import_error_columns">"maqaan sarara gad bu'uu seera barreefamaa hin hordofne"</string>
+    <string name="tutorial_previous">Kan darbe</string>
+    <string name="tutorial_next">Kan itti aanu</string>
+    <string name="trait_layout_data_stored">"Daatan olka'amee jira"</string>
     <string name="traits_create_optional">Filannoo keeti</string>
-    <string name="exportmsg">Baasaa jira</string>
+    <string name="export_progress">Baasaa jira</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">Ibsa</string>
-    <string name="mhelp1">Agarsiifni odeefanno kan fuula dura jiru data dabalataa agarsiisa</string>
-    <string name="mhelp2">Sararri agarsiiftuu gurraachi guddan maqaa tokkko gara maqaa biraa dabarsuuf gargaara. Sararri agarssiftu bulee xiqoon gara amala tokko gara kan biraati gessiti</string>
-    <string name="mhelp3">"Amaloonni akka hojjatu ta'an hundinuu wagaa amalli amma irra jirtu tuqame ni mul'atu"</string>
-    <string name="mhelp4">Oddoon barreeffama tartiiba 1ffa fi 2ffa gara gatii barbaadametti darbuuf ni gargaara</string>
-    <string name="mhelp5">Barbaachi gara gubbaa fuula meeshaarra kan jiru kuusaa barbaadu ni dandeesisa</string>
-    <string name="shelp1">CSV ykn XLS galchuuf, Dirree filadhu</string>
-    <string name="shelp2">"Yoo faayilii tokko filte, sarari gadi bu'an kara harka bitaatti yoo mul'atan, daata isaanii gara harka mirgaatti jijjiruun ni danda'ama. Faayiliin sarara gad bu'an 3 qaba: Maqaa dhuunfaa, tartiiba 1ffaa fi tartiiba 2ffaa"</string>
-    <string name="shelp3">"Amala ida'uuf ykn galchuuf, amala kan jedhu tuqi"</string>
-    <string name="shelp4">Daataa funaanuf, setup kan jedhu filadhu</string>
-    <string name="shelp5">Fuula setup kan jedhurratti maaqaan maqaa nama ragaa funaanuti, Location kan jedhu edeeffanno bakki dirreen suni itti argamuuti funaana</string>
-    <string name="shelp6">Erga ragaan funaanameen booda, gara gubbaa harka bitaatin back button kan jedhu fuula gudicharra geessa.</string>
-    <string name="thelp1">"'Add traits jechuun amala haara uumuuf. Fuula ibsaa fi fuula barreffamni itti godhamu yeroo tokko fayyadamuun hindanda'amu. Ragaa amalootaa funaanuf, akkata adda addaa fayyadamuun ni danda'ama"</string>
-    <string name="thelp2">Fayilii amaloota galchhuf, fuula duraarra Import kan jedhu filadhu.</string>
-    <string name="thelp3">Akkaataa amalli itti uumamu, ibsa meeshichaa dubbisi</string>
-    <string name="importtraitwarning">Odoo amaloota hin uumin dura Diree galchi</string>
-    <string name="nofieldloaded">Yeroo kana direen hingalle. Odoo ragaa hin funaanin dura, dirree galchi</string>
-    <string name="notraitloaded">Amaloonni hinjiran. Odoo ragaa funaanuu hinjalqabni, amaloota uumi</string>
-    <string name="dbreset">"Kuusa irra deeebi'ii qopheessi"</string>
-    <string name="resetwarning1">Ragaan hindinuu ni bada. Dhugaa keetii?</string>
-    <string name="resetwarning2">"Wanti dalagame duubatti hin deeb'u. Meeshan erga kuusaa qul'qullessen booda hojii ni dhaaba. Akkanumatti itti fufuu ni barbaaddaa?"</string>
-    <string name="dbbackup">Kuusaa ragaa</string>
-    <string name="resetcomplete">Kuusan badee jira</string>
-    <string name="dbimport">Kuusaa ragaa galchi</string>
-    <string name="dbexport">Kuusaa ragaa baasi.</string>
-    <string name="allcolumns">Sarara gad qajeela hundaa</string>
-    <string name="alltraits">amaloota hundaa</string>
+    <string name="tutorial_dialog_title">Ibsa</string>
+    <string name="tutorial_main_1">Agarsiifni odeefanno kan fuula dura jiru data dabalataa agarsiisa</string>
+    <string name="tutorial_main_2">Sararri agarsiiftuu gurraachi guddan maqaa tokkko gara maqaa biraa dabarsuuf gargaara. Sararri agarssiftu bulee xiqoon gara amala tokko gara kan biraati gessiti</string>
+    <string name="tutorial_main_3">"Amaloonni akka hojjatu ta'an hundinuu wagaa amalli amma irra jirtu tuqame ni mul'atu"</string>
+    <string name="tutorial_main_4">Oddoon barreeffama tartiiba 1ffa fi 2ffa gara gatii barbaadametti darbuuf ni gargaara</string>
+    <string name="tutorial_main_5">Barbaachi gara gubbaa fuula meeshaarra kan jiru kuusaa barbaadu ni dandeesisa</string>
+    <string name="tutorial_settings_1">CSV ykn XLS galchuuf, Dirree filadhu</string>
+    <string name="tutorial_settings_2">"Yoo faayilii tokko filte, sarari gadi bu'an kara harka bitaatti yoo mul'atan, daata isaanii gara harka mirgaatti jijjiruun ni danda'ama. Faayiliin sarara gad bu'an 3 qaba: Maqaa dhuunfaa, tartiiba 1ffaa fi tartiiba 2ffaa"</string>
+    <string name="tutorial_settings_3">"Amala ida'uuf ykn galchuuf, amala kan jedhu tuqi"</string>
+    <string name="tutorial_settings_4">Daataa funaanuf, setup kan jedhu filadhu</string>
+    <string name="tutorial_settings_5">Fuula setup kan jedhurratti maaqaan maqaa nama ragaa funaanuti, Location kan jedhu edeeffanno bakki dirreen suni itti argamuuti funaana</string>
+    <string name="tutorial_settings_6">Erga ragaan funaanameen booda, gara gubbaa harka bitaatin back button kan jedhu fuula gudicharra geessa.</string>
+    <string name="tutorial_traits_1">"'Add traits jechuun amala haara uumuuf. Fuula ibsaa fi fuula barreffamni itti godhamu yeroo tokko fayyadamuun hindanda'amu. Ragaa amalootaa funaanuf, akkata adda addaa fayyadamuun ni danda'ama"</string>
+    <string name="tutorial_traits_2">Fayilii amaloota galchhuf, fuula duraarra Import kan jedhu filadhu.</string>
+    <string name="tutorial_traits_3">Akkaataa amalli itti uumamu, ibsa meeshichaa dubbisi</string>
+    <string name="warning_field_before_traits">Odoo amaloota hin uumin dura Diree galchi</string>
+    <string name="warning_field_missing">Yeroo kana direen hingalle. Odoo ragaa hin funaanin dura, dirree galchi</string>
+    <string name="warning_traits_missing">Amaloonni hinjiran. Odoo ragaa funaanuu hinjalqabni, amaloota uumi</string>
+    <string name="database_reset">"Kuusa irra deeebi'ii qopheessi"</string>
+    <string name="database_reset_warning1">Ragaan hindinuu ni bada. Dhugaa keetii?</string>
+    <string name="database_reset_warning2">"Wanti dalagame duubatti hin deeb'u. Meeshan erga kuusaa qul'qullessen booda hojii ni dhaaba. Akkanumatti itti fufuu ni barbaaddaa?"</string>
+    <string name="database_dialog_title">Kuusaa ragaa</string>
+    <string name="database_reset_message">Kuusan badee jira</string>
+    <string name="database_import">Kuusaa ragaa galchi</string>
+    <string name="database_export">Kuusaa ragaa baasi.</string>
+    <string name="export_content_columns_all">Sarara gad qajeela hundaa</string>
+    <string name="export_content_traits_all">amaloota hundaa</string>
     <string name="traits_format_photo">Footoo</string>
     <string name="play">Taphachiisi</string>
     <string name="capture">Kaasuu</string>
@@ -144,8 +144,8 @@
     <string name="fields_load">Dhiyeessi</string>
     <string name="traits_options_delete">Balleessi</string>
     <string name="fields_date_imported">Ragaan galee jira</string>
-    <string name="exporttraiterror">Ragaan bahu hinjiru</string>
-    <string name="tipsdesc">"Ibsaa akka qophaa'uu ni barbaaddaa? Kun qopheessa ol'aanaa kessatti jijjiramuu ni danda'a"</string>
+    <string name="export_error_data_missing">Ragaan bahu hinjiru</string>
+    <string name="tutorial_dialog_description">"Ibsaa akka qophaa'uu ni barbaaddaa? Kun qopheessa ol'aanaa kessatti jijjiramuu ni danda'a"</string>
     <string name="dialog_cancel">Ballessi</string>
     <string name="rangechime">Tartiibni jalqabaa yoo jijirame sagalee beeksisaa</string>
     <string name="traits_create_photo_maximum">"Baay'ina footo qabuu danda'u"</string>
