--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">Adicionar</string>
     <string name="search_dialog_clear">Limpar</string>
     <string name="dialog_close">Fechar</string>
-    <string name="minusday">-1 Dia</string>
+    <string name="trait_layout_date_minusday">-1 Dia</string>
     <string name="enter">Entrar</string>
-    <string name="plusday">+1 Dia</string>
+    <string name="trait_layout_date_plusday">+1 Dia</string>
     <string name="record">Gravar</string>
     <string name="dialog_ok">OK</string>
     <string name="stop">Parar</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">Erro</string>
     <string name="valueless">O valor é menor do que o conjunto mínimo</string>
     <string name="valuemore">O valor é maior do que o conjunto mínimo</string>
-    <string name="settings_changelog_title">Alterar registro</string>
+    <string name="changelog_title">Alterar registro</string>
     <string name="main_toolbar_moveto_no_match">Nenhum valor correspondente</string>
     <string name="dialog_warning">Aviso</string>
-    <string name="exporterror">Erro durante a exportação</string>
-    <string name="exportcomplete">Exportação completada</string>
+    <string name="export_error_general">Erro durante a exportação</string>
+    <string name="export_complete">Exportação completada</string>
     <string name="profile_person_title">Definir usuário</string>
     <string name="profile_location_title">Definir local</string>
     <string name="about_title">Sobre</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">Longitude</string>
     <string name="profile_get_location">Obter localização</string>
     <string name="ignoreentries">Esconder entradas com dados já coletados</string>
-    <string name="dbformat">Base de dados</string>
-    <string name="tableformat">Tabela</string>
-    <string name="filename">Nome do arquivo</string>
+    <string name="export_format_database">Base de dados</string>
+    <string name="export_format_table">Tabela</string>
+    <string name="export_file_name">Nome do arquivo</string>
     <string name="drop1">InfoBarra 1</string>
     <string name="drop2">InfoBarra 2</string>
     <string name="drop3">InfoBarra 3</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">é maior que</string>
     <string name="search_dialog_query_is_less_than">é menor que</string>
     <string name="search_results_missing">A busca não encontrou resultados</string>
-    <string name="importunique">Identificador único</string>
-    <string name="importfirst">Ordem primária</string>
-    <string name="importsecond">ordem secundária</string>
-    <string name="importfields">Importar campo</string>
-    <string name="importmsg">Por favor aguarde...</string>
-    <string name="importerror">Erro na importação</string>
-    <string name="importuniqueerror">Identificador único contém duplicatas</string>
+    <string name="import_dialog_unique">Identificador único</string>
+    <string name="import_dialog_primary">Ordem primária</string>
+    <string name="import_dialog_secondary">ordem secundária</string>
+    <string name="import_dialog_title">Importar campo</string>
+    <string name="import_dialog_importing">Por favor aguarde...</string>
+    <string name="import_error_general">Erro na importação</string>
+    <string name="import_error_unique">Identificador único contém duplicatas</string>
     <string name="traits_toolbar_add_trait">Adicionar um caractere</string>
     <string name="traits_create_format">Formato</string>
     <string name="traits_create_value_default">Padrão</string>
@@ -97,48 +97,48 @@
     <string name="settings_advanced">Configurações avançadas</string>
     <string name="traits_create_categories_text">Separar items com uma /</string>
     <string name="main_infobar_no_data">Não há dados</string>
-    <string name="noexportcheck">Tipo de exportação precisa ser selecionado</string>
+    <string name="export_error_missing_format">Tipo de exportação precisa ser selecionado</string>
     <string name="search_results_dialog_title">Resultados da busca</string>
-    <string name="tips">Habilitar tutorial</string>
+    <string name="preferences_interface_tutorial">Habilitar tutorial</string>
     <string name="cycle">Avançando a partir do último caractere avança para primeiro caractere da próxima entrada</string>
     <string name="useday">Use dia numérico do ano, em vez de data</string>
-    <string name="columnfail">Os nomes das colunas contêm símbolos ilegais</string>
-    <string name="prev">Anterior</string>
-    <string name="next">Próximo</string>
-    <string name="stored">Os dados foram salvos</string>
+    <string name="import_error_columns">Os nomes das colunas contêm símbolos ilegais</string>
+    <string name="tutorial_previous">Anterior</string>
+    <string name="tutorial_next">Próximo</string>
+    <string name="trait_layout_data_stored">Os dados foram salvos</string>
     <string name="traits_create_optional">Opcional</string>
-    <string name="exportmsg">Exportando...</string>
+    <string name="export_progress">Exportando...</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">Tutorial</string>
-    <string name="mhelp1">As barras de informações (Infobarras) no topo da tela mostra dados extras para cada entrada. Estes podem ser alterados no menu de instalação.</string>
-    <string name="mhelp2">As setas pretas grandes movem-se entre as entradas. As setas azuis pequenas movem-se entre os caracteres.</string>
-    <string name="mhelp3">Uma lista de caracteres habilitados é exibido quando o caractere ativo é pressionado.</string>
-    <string name="mhelp4">As áreas primárias e secundárias da ordem do texto pode ser utilizadas para mover-se para a primeira ocorrência de um valor específico.</string>
-    <string name="mhelp5">Busca no topo da tela permite consultar o banco de dados.</string>
-    <string name="shelp1">Para importar um arquivo CSV ou XLS, selecione Campo.</string>
-    <string name="shelp2">Depois de selecionar um arquivo, as colunas do arquivo são listadas à esquerda e seu tipo de dados pode ser configurado no lado direito. Os arquivos devem conter três colunas: um identificador único, uma ordem primária e uma ordem secundária.</string>
-    <string name="shelp3">Para adicionar ou importar novos caracteres, clique em caracteres</string>
-    <string name="shelp4">Para se preparar para a coleta de dados, selecione configuração.</string>
-    <string name="shelp5">Na tela de configuração: Usuário que é o nome da pessoa que a coleta de dados, Local recolhe as coordenadas de campo, Caracteres permite o ajuste das caracteres ativos e InfoBars exibe informações do genótipo/entrada na tela principal.</string>
-    <string name="shelp6">Uma vez que os dados são importados, o botão voltar no canto superior esquerdo é usado para voltar à tela principal.</string>
-    <string name="thelp1">Adicionar caractere no menu cria um novo caractere. Não é possível utilizar o teclado e tutorial ao mesmo tempo. Diferentes formatos de caracteres estão disponíveis para coleta de dados.</string>
-    <string name="thelp2">Para importar caracteres de um arquivos, pressione o botão do menu e escolha Importar.</string>
-    <string name="thelp3">Consulte o manual do aplicativo para obter informações adicionais sobre a criação de caracteres.</string>
-    <string name="importtraitwarning">Um campo deve ser importado antes que um caractere possa ser criado.</string>
-    <string name="nofieldloaded">Nenhum campo está atualmente carregado. Por favor, coloque um campo antes de coletar dados.</string>
-    <string name="notraitloaded">Não existem caracteres. Por favor, crie caracteres antes de coletar dados.</string>
-    <string name="dbreset">Redefinir o banco de dados</string>
-    <string name="resetwarning1">Todos os dados serão excluídos em Redefinir. Você tem certeza disso?</string>
-    <string name="resetwarning2">Essa ação não pode ser revertida. O aplicativo vai fechar depois de limpar o banco de dados. Você ainda deseja continuar?</string>
-    <string name="dbbackup">Base de dados</string>
-    <string name="resetcomplete">O banco de dados foi excluído</string>
-    <string name="dbimport">Importar a base de dados</string>
-    <string name="dbexport">Exportar a base de dados</string>
-    <string name="headerformat">Formato</string>
-    <string name="allcolumns">Todas as colunas do campo</string>
-    <string name="alltraits">Todos os caracteres</string>
+    <string name="tutorial_dialog_title">Tutorial</string>
+    <string name="tutorial_main_1">As barras de informações (Infobarras) no topo da tela mostra dados extras para cada entrada. Estes podem ser alterados no menu de instalação.</string>
+    <string name="tutorial_main_2">As setas pretas grandes movem-se entre as entradas. As setas azuis pequenas movem-se entre os caracteres.</string>
+    <string name="tutorial_main_3">Uma lista de caracteres habilitados é exibido quando o caractere ativo é pressionado.</string>
+    <string name="tutorial_main_4">As áreas primárias e secundárias da ordem do texto pode ser utilizadas para mover-se para a primeira ocorrência de um valor específico.</string>
+    <string name="tutorial_main_5">Busca no topo da tela permite consultar o banco de dados.</string>
+    <string name="tutorial_settings_1">Para importar um arquivo CSV ou XLS, selecione Campo.</string>
+    <string name="tutorial_settings_2">Depois de selecionar um arquivo, as colunas do arquivo são listadas à esquerda e seu tipo de dados pode ser configurado no lado direito. Os arquivos devem conter três colunas: um identificador único, uma ordem primária e uma ordem secundária.</string>
+    <string name="tutorial_settings_3">Para adicionar ou importar novos caracteres, clique em caracteres</string>
+    <string name="tutorial_settings_4">Para se preparar para a coleta de dados, selecione configuração.</string>
+    <string name="tutorial_settings_5">Na tela de configuração: Usuário que é o nome da pessoa que a coleta de dados, Local recolhe as coordenadas de campo, Caracteres permite o ajuste das caracteres ativos e InfoBars exibe informações do genótipo/entrada na tela principal.</string>
+    <string name="tutorial_settings_6">Uma vez que os dados são importados, o botão voltar no canto superior esquerdo é usado para voltar à tela principal.</string>
+    <string name="tutorial_traits_1">Adicionar caractere no menu cria um novo caractere. Não é possível utilizar o teclado e tutorial ao mesmo tempo. Diferentes formatos de caracteres estão disponíveis para coleta de dados.</string>
+    <string name="tutorial_traits_2">Para importar caracteres de um arquivos, pressione o botão do menu e escolha Importar.</string>
+    <string name="tutorial_traits_3">Consulte o manual do aplicativo para obter informações adicionais sobre a criação de caracteres.</string>
+    <string name="warning_field_before_traits">Um campo deve ser importado antes que um caractere possa ser criado.</string>
+    <string name="warning_field_missing">Nenhum campo está atualmente carregado. Por favor, coloque um campo antes de coletar dados.</string>
+    <string name="warning_traits_missing">Não existem caracteres. Por favor, crie caracteres antes de coletar dados.</string>
+    <string name="database_reset">Redefinir o banco de dados</string>
+    <string name="database_reset_warning1">Todos os dados serão excluídos em Redefinir. Você tem certeza disso?</string>
+    <string name="database_reset_warning2">Essa ação não pode ser revertida. O aplicativo vai fechar depois de limpar o banco de dados. Você ainda deseja continuar?</string>
+    <string name="database_dialog_title">Base de dados</string>
+    <string name="database_reset_message">O banco de dados foi excluído</string>
+    <string name="database_import">Importar a base de dados</string>
+    <string name="database_export">Exportar a base de dados</string>
+    <string name="export_format_title">Formato</string>
+    <string name="export_content_columns_all">Todas as colunas do campo</string>
+    <string name="export_content_traits_all">Todos os caracteres</string>
     <string name="traits_format_photo">Foto</string>
     <string name="play">Reproduzir</string>
     <string name="capture">Capturar</string>
@@ -152,8 +152,8 @@
     <string name="fields_load">Carregar</string>
     <string name="traits_options_delete">Excluir</string>
     <string name="fields_date_imported">Dados importados</string>
-    <string name="exporttraiterror">Não há dados para exportação</string>
-    <string name="tipsdesc">Você deseja habilitar o tutorial? Esta configuração pode ser alterada nas configurações avançadas.</string>
+    <string name="export_error_data_missing">Não há dados para exportação</string>
+    <string name="tutorial_dialog_description">Você deseja habilitar o tutorial? Esta configuração pode ser alterada nas configurações avançadas.</string>
     <string name="dialog_cancel">Cancelar</string>
     <string name="rangechime">Som de notificação muda quando ordem primária é alterada</string>
     <string name="traits_create_photo_maximum">Número máximo de fotos</string>
