--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">Добавить</string>
     <string name="search_dialog_clear">Удалить</string>
     <string name="dialog_close">Закрыть</string>
-    <string name="minusday">-1 день</string>
+    <string name="trait_layout_date_minusday">-1 день</string>
     <string name="enter">Ввод</string>
-    <string name="plusday">+1 день</string>
+    <string name="trait_layout_date_plusday">+1 день</string>
     <string name="record">аудиозапись</string>
     <string name="dialog_ok">Правильно</string>
     <string name="stop">Стоп</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">Ошибка</string>
     <string name="valueless">Значение меньше установленного минимума</string>
     <string name="valuemore">Значение больше установленного максимума</string>
-    <string name="settings_changelog_title">Внесенные изменения</string>
+    <string name="changelog_title">Внесенные изменения</string>
     <string name="main_toolbar_moveto_no_match">Показатель не соответсвует</string>
     <string name="dialog_warning">Предупреждение</string>
-    <string name="exporterror">Ошибка экспорта</string>
-    <string name="exportcomplete">Экспорт завершен</string>
+    <string name="export_error_general">Ошибка экспорта</string>
+    <string name="export_complete">Экспорт завершен</string>
     <string name="profile_person_title">Ввести имя пользователя</string>
     <string name="profile_location_title">Ввести местонахождение (координаты)</string>
     <string name="about_title">О программе</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">долгота</string>
     <string name="profile_get_location">определить координаты</string>
     <string name="ignoreentries">Скрыть введенные данные</string>
-    <string name="dbformat">База данных</string>
-    <string name="tableformat">Таблица</string>
-    <string name="filename">Название файла</string>
+    <string name="export_format_database">База данных</string>
+    <string name="export_format_table">Таблица</string>
+    <string name="export_file_name">Название файла</string>
     <string name="drop1">Примечания 1</string>
     <string name="drop2">Примечания 2</string>
     <string name="drop3">Примечания 3</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">больше чем</string>
     <string name="search_dialog_query_is_less_than">меньше чем</string>
     <string name="search_results_missing">поиск не дал результатов</string>
-    <string name="importunique">уникальный идентификатор</string>
-    <string name="importfirst">первичный порядок</string>
-    <string name="importsecond">вторичный порядок</string>
-    <string name="importfields">Импорт делянки</string>
-    <string name="importmsg">Пожалуйта, подождите ...</string>
-    <string name="importerror">Ошибка импорта</string>
-    <string name="importuniqueerror">Уникальный идентификатор содержит повторения</string>
+    <string name="import_dialog_unique">уникальный идентификатор</string>
+    <string name="import_dialog_primary">первичный порядок</string>
+    <string name="import_dialog_secondary">вторичный порядок</string>
+    <string name="import_dialog_title">Импорт делянки</string>
+    <string name="import_dialog_importing">Пожалуйта, подождите ...</string>
+    <string name="import_error_general">Ошибка импорта</string>
+    <string name="import_error_unique">Уникальный идентификатор содержит повторения</string>
     <string name="traits_toolbar_add_trait">добавить показатель</string>
     <string name="traits_create_format">Формат</string>
     <string name="traits_create_value_default">значение по умолчанию</string>
@@ -97,48 +97,48 @@
     <string name="settings_advanced">Дополнителные установки</string>
     <string name="traits_create_categories_text">Отделить элементы перечня наклонной чертой /</string>
     <string name="main_infobar_no_data">Нет данных</string>
-    <string name="noexportcheck">Тип экспотрта должен быть выбран</string>
+    <string name="export_error_missing_format">Тип экспотрта должен быть выбран</string>
     <string name="search_results_dialog_title">Результаты поиска</string>
-    <string name="tips">Обучение разрешено</string>
+    <string name="preferences_interface_tutorial">Обучение разрешено</string>
     <string name="cycle">Переход от последнего показателя к первому показателю следующей группы данных</string>
     <string name="useday">Использовать номер дня в году вместо даты</string>
-    <string name="columnfail">Название колонки содержит неразрешенные символы</string>
-    <string name="prev">предыдущий</string>
-    <string name="next">следующий</string>
-    <string name="stored">данные сохранены</string>
+    <string name="import_error_columns">Название колонки содержит неразрешенные символы</string>
+    <string name="tutorial_previous">предыдущий</string>
+    <string name="tutorial_next">следующий</string>
+    <string name="trait_layout_data_stored">данные сохранены</string>
     <string name="traits_create_optional">Необязательный</string>
-    <string name="exportmsg">Идет экспорт данных</string>
+    <string name="export_progress">Идет экспорт данных</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">Обучение</string>
-    <string name="mhelp1">Строки вверху экрана показывают дополнительные данные для каждого ввода. Эти данные могут быть изменены в меню Настроек</string>
-    <string name="mhelp2">Большие черные стрелки используются для выбора группы вводимых данных. Маленькие синие стрелки используются для выбора показателей.</string>
-    <string name="mhelp3">Список доступных показателей отображается когда выбран текущий показатель</string>
-    <string name="mhelp4">Области для основного и дополнительного текста могут использоваться для перехода к первому появлению определенного значения</string>
-    <string name="mhelp5">Кнопка Поиск позволяет ввести ключевое слово для поиска объектов в базе данных</string>
-    <string name="shelp1">Чтобы импортировать CSV или XLS файл, выберете в меню Поле</string>
-    <string name="shelp2">После выбора файла, его структура и тип данных могут быть настроены. Файл должен содержать три колонки: уникальный идентификатор, a primary order, and a secondary order.</string>
-    <string name="shelp3">Чтобы добавить или импортировать новые показатели, выберите меню Показатели</string>
-    <string name="shelp4">Чтобы подгодовиться к сбору данных, выберите меню Настройки</string>
-    <string name="shelp5">Экран Настроек: Пользователь - имя пользователя; Местоположение - координаты поля (делянки); А</string>
-    <string name="shelp6">После того как данные импортированы, кнопка Назад используется для возвращения к главному экрану</string>
-    <string name="thelp1">Меню Добавить показатель позволяеть добавлять новые показатели. Нелья использовать клавиатуру и обучение одновременно. При сборе данных различные форматы показателей могут быть использованы.</string>
-    <string name="thelp2">Чтобы импортировать файлы показателей, нажмите кнопку меню и выберитн Импорт</string>
-    <string name="thelp3">Дополнительную информацию о том как добавить новые показатели, можно найти в описании программы</string>
-    <string name="importtraitwarning">Перед тем как ввести показатели, поле должно быть импортировано</string>
-    <string name="nofieldloaded">Поле не введено. Введите поле перед тем как начать сбор данных</string>
-    <string name="notraitloaded">Показатели не введены. Введите показатели перед тем как начать сбор данных</string>
-    <string name="dbreset">Восстановить исходную базу данных</string>
-    <string name="resetwarning1">Все данные будут удалены при возвращении к исходным установкам. Продолжать?</string>
-    <string name="resetwarning2">Это действие нельзя отменить. Приложение закончит работу после удаления данных. Продолжать?</string>
-    <string name="dbbackup">База данных</string>
-    <string name="resetcomplete">База данных удалена</string>
-    <string name="dbimport">Импорт базы данных</string>
-    <string name="dbexport">Экспорт базы данных</string>
-    <string name="headerformat">Формат</string>
-    <string name="allcolumns">Все рядки делянки</string>
-    <string name="alltraits">Все показатели</string>
+    <string name="tutorial_dialog_title">Обучение</string>
+    <string name="tutorial_main_1">Строки вверху экрана показывают дополнительные данные для каждого ввода. Эти данные могут быть изменены в меню Настроек</string>
+    <string name="tutorial_main_2">Большие черные стрелки используются для выбора группы вводимых данных. Маленькие синие стрелки используются для выбора показателей.</string>
+    <string name="tutorial_main_3">Список доступных показателей отображается когда выбран текущий показатель</string>
+    <string name="tutorial_main_4">Области для основного и дополнительного текста могут использоваться для перехода к первому появлению определенного значения</string>
+    <string name="tutorial_main_5">Кнопка Поиск позволяет ввести ключевое слово для поиска объектов в базе данных</string>
+    <string name="tutorial_settings_1">Чтобы импортировать CSV или XLS файл, выберете в меню Поле</string>
+    <string name="tutorial_settings_2">После выбора файла, его структура и тип данных могут быть настроены. Файл должен содержать три колонки: уникальный идентификатор, a primary order, and a secondary order.</string>
+    <string name="tutorial_settings_3">Чтобы добавить или импортировать новые показатели, выберите меню Показатели</string>
+    <string name="tutorial_settings_4">Чтобы подгодовиться к сбору данных, выберите меню Настройки</string>
+    <string name="tutorial_settings_5">Экран Настроек: Пользователь - имя пользователя; Местоположение - координаты поля (делянки); А</string>
+    <string name="tutorial_settings_6">После того как данные импортированы, кнопка Назад используется для возвращения к главному экрану</string>
+    <string name="tutorial_traits_1">Меню Добавить показатель позволяеть добавлять новые показатели. Нелья использовать клавиатуру и обучение одновременно. При сборе данных различные форматы показателей могут быть использованы.</string>
+    <string name="tutorial_traits_2">Чтобы импортировать файлы показателей, нажмите кнопку меню и выберитн Импорт</string>
+    <string name="tutorial_traits_3">Дополнительную информацию о том как добавить новые показатели, можно найти в описании программы</string>
+    <string name="warning_field_before_traits">Перед тем как ввести показатели, поле должно быть импортировано</string>
+    <string name="warning_field_missing">Поле не введено. Введите поле перед тем как начать сбор данных</string>
+    <string name="warning_traits_missing">Показатели не введены. Введите показатели перед тем как начать сбор данных</string>
+    <string name="database_reset">Восстановить исходную базу данных</string>
+    <string name="database_reset_warning1">Все данные будут удалены при возвращении к исходным установкам. Продолжать?</string>
+    <string name="database_reset_warning2">Это действие нельзя отменить. Приложение закончит работу после удаления данных. Продолжать?</string>
+    <string name="database_dialog_title">База данных</string>
+    <string name="database_reset_message">База данных удалена</string>
+    <string name="database_import">Импорт базы данных</string>
+    <string name="database_export">Экспорт базы данных</string>
+    <string name="export_format_title">Формат</string>
+    <string name="export_content_columns_all">Все рядки делянки</string>
+    <string name="export_content_traits_all">Все показатели</string>
     <string name="traits_format_photo">Фото</string>
     <string name="play">Проиграть запись</string>
     <string name="capture">Съемка</string>
@@ -152,8 +152,8 @@
     <string name="fields_load">Загрузка</string>
     <string name="traits_options_delete">Удалить</string>
     <string name="fields_date_imported">Импортированная дата</string>
-    <string name="exporttraiterror">данные для экспорта не найдены</string>
-    <string name="tipsdesc">Включить обучение? Эта Настройка может быть изменена в меню Дополнительные настройки</string>
+    <string name="export_error_data_missing">данные для экспорта не найдены</string>
+    <string name="tutorial_dialog_description">Включить обучение? Эта Настройка может быть изменена в меню Дополнительные настройки</string>
     <string name="dialog_cancel">Отменить</string>
     <string name="rangechime">Звуковой сигнал сопровождает изменение основного порядка</string>
     <string name="traits_create_photo_maximum">Максимальное количество фотоснимков</string>
