--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">加入</string>
     <string name="search_dialog_clear">清除</string>
     <string name="dialog_close">关闭</string>
-    <string name="minusday">减一天</string>
+    <string name="trait_layout_date_minusday">减一天</string>
     <string name="enter">进入</string>
-    <string name="plusday">加一天</string>
+    <string name="trait_layout_date_plusday">加一天</string>
     <string name="record">记录</string>
     <string name="dialog_ok">同意</string>
     <string name="stop">停止</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">错误</string>
     <string name="valueless">数值低于最小限度</string>
     <string name="valuemore">数值高于最大限度</string>
-    <string name="settings_changelog_title">更改记录</string>
+    <string name="changelog_title">更改记录</string>
     <string name="main_toolbar_moveto_no_match">无相配性状</string>
     <string name="dialog_warning">警告</string>
-    <string name="exporterror">导出错误</string>
-    <string name="exportcomplete">导出完成</string>
+    <string name="export_error_general">导出错误</string>
+    <string name="export_complete">导出完成</string>
     <string name="profile_person_title">设定使用人</string>
     <string name="profile_location_title">设定位置</string>
     <string name="about_title">关于</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">经度</string>
     <string name="profile_get_location">选择位置</string>
     <string name="ignoreentries">隐藏数据收集条目</string>
-    <string name="dbformat">数据库</string>
-    <string name="tableformat">表格</string>
-    <string name="filename">文件名</string>
+    <string name="export_format_database">数据库</string>
+    <string name="export_format_table">表格</string>
+    <string name="export_file_name">文件名</string>
     <string name="drop1">信息横条1</string>
     <string name="drop2">信息横条2</string>
     <string name="drop3">信息横条3</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">多于</string>
     <string name="search_dialog_query_is_less_than">少于</string>
     <string name="search_results_missing">搜寻无返回结果</string>
-    <string name="importunique">唯一标识符</string>
-    <string name="importfirst">主要顺序</string>
-    <string name="importsecond">次要顺序</string>
-    <string name="importfields">导入的田间</string>
-    <string name="importmsg">请等待</string>
-    <string name="importerror">导入错误</string>
-    <string name="importuniqueerror">唯一标识符包含重复项</string>
+    <string name="import_dialog_unique">唯一标识符</string>
+    <string name="import_dialog_primary">主要顺序</string>
+    <string name="import_dialog_secondary">次要顺序</string>
+    <string name="import_dialog_title">导入的田间</string>
+    <string name="import_dialog_importing">请等待</string>
+    <string name="import_error_general">导入错误</string>
+    <string name="import_error_unique">唯一标识符包含重复项</string>
     <string name="traits_toolbar_add_trait">添加性状</string>
     <string name="traits_create_format">格式</string>
     <string name="traits_create_value_default">默认</string>
@@ -97,48 +97,48 @@
     <string name="settings_advanced">进阶设定</string>
     <string name="traits_create_categories_text">分开项目</string>
     <string name="main_infobar_no_data">无数据</string>
-    <string name="noexportcheck">必须选择导出类型</string>
+    <string name="export_error_missing_format">必须选择导出类型</string>
     <string name="search_results_dialog_title">查询结果</string>
-    <string name="tips">启用教程</string>
+    <string name="preferences_interface_tutorial">启用教程</string>
     <string name="cycle">从最后一个性状前进到下一个条目的第一性状</string>
     <string name="useday">使用累计日代替日期</string>
-    <string name="columnfail">列名称包含非法字符</string>
-    <string name="prev">以前的</string>
-    <string name="next">下一个</string>
-    <string name="stored">数据已保存</string>
+    <string name="import_error_columns">列名称包含非法字符</string>
+    <string name="tutorial_previous">以前的</string>
+    <string name="tutorial_next">下一个</string>
+    <string name="trait_layout_data_stored">数据已保存</string>
     <string name="traits_create_optional">可选择的</string>
-    <string name="exportmsg">导出</string>
+    <string name="export_progress">导出</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">教程</string>
-    <string name="mhelp1">在屏幕顶部的信息栏显示每个条目的额外数据。这些可以在设置菜单中更改。</string>
-    <string name="mhelp2">大，黑色的箭头在条目之间移动。小的蓝色箭头在性状之间移动。</string>
-    <string name="mhelp3">当正在使用的性状被按下时，所有性状都会显示出来。</string>
-    <string name="mhelp4">主要的和从属的顺序文字区域可以用于移动到第一次出现的某个特定值。</string>
-    <string name="mhelp5">在屏幕顶部的搜索允许数据库查询。</string>
-    <string name="shelp1">导入CSV 或 XLS 文件, 请选择田间</string>
-    <string name="shelp2">在选择文件后，文件的列在左边和右边可以配置它们的数据类型。文件必须包含三列：一个唯一的标识符，一个主要顺序，和一个次要顺序。</string>
-    <string name="shelp3">为了增加或导入新的性状，请按性状。</string>
-    <string name="shelp4">为了准备收集数据，请选择设定。</string>
-    <string name="shelp5">在设定屏幕：人是指收集数据人的名字，位置收集田间坐标，性状允许调整正在使用中性状，和信息栏在主屏幕上显示上下文相关的条目信息。</string>
-    <string name="shelp6">一旦导入数据，左上角的后退按钮用来移动到主屏幕。</string>
-    <string name="thelp1">在菜单添加性状创建一个新的性状。不能同时使用键盘和教程。数据收集有不同性状的格式。</string>
-    <string name="thelp2">为了导入性状文件，请按菜单键并选择导入</string>
-    <string name="thelp3">有关性状建立，额外信息请查阅咨询应用程序手册。</string>
-    <string name="importtraitwarning">在性状被建立之前，必须导入一个田间。</string>
-    <string name="nofieldloaded">当前无田间加载的是没有字段。</string>
-    <string name="notraitloaded">没有性状存在。请在收集数据之前，创建性状。</string>
-    <string name="dbreset">重置数据库</string>
-    <string name="resetwarning1">重置将删除所有数据.你肯定吗</string>
-    <string name="resetwarning2">此操作不是可逆的.该应用程序将清除数据库后停止.你仍然要继续吗?</string>
-    <string name="dbbackup">数据库</string>
-    <string name="resetcomplete">数据库已被删除</string>
-    <string name="dbimport">导入数据库</string>
-    <string name="dbexport">导出数据库</string>
-    <string name="headerformat">格式</string>
-    <string name="allcolumns">所有田间列数</string>
-    <string name="alltraits">所有性状</string>
+    <string name="tutorial_dialog_title">教程</string>
+    <string name="tutorial_main_1">在屏幕顶部的信息栏显示每个条目的额外数据。这些可以在设置菜单中更改。</string>
+    <string name="tutorial_main_2">大，黑色的箭头在条目之间移动。小的蓝色箭头在性状之间移动。</string>
+    <string name="tutorial_main_3">当正在使用的性状被按下时，所有性状都会显示出来。</string>
+    <string name="tutorial_main_4">主要的和从属的顺序文字区域可以用于移动到第一次出现的某个特定值。</string>
+    <string name="tutorial_main_5">在屏幕顶部的搜索允许数据库查询。</string>
+    <string name="tutorial_settings_1">导入CSV 或 XLS 文件, 请选择田间</string>
+    <string name="tutorial_settings_2">在选择文件后，文件的列在左边和右边可以配置它们的数据类型。文件必须包含三列：一个唯一的标识符，一个主要顺序，和一个次要顺序。</string>
+    <string name="tutorial_settings_3">为了增加或导入新的性状，请按性状。</string>
+    <string name="tutorial_settings_4">为了准备收集数据，请选择设定。</string>
+    <string name="tutorial_settings_5">在设定屏幕：人是指收集数据人的名字，位置收集田间坐标，性状允许调整正在使用中性状，和信息栏在主屏幕上显示上下文相关的条目信息。</string>
+    <string name="tutorial_settings_6">一旦导入数据，左上角的后退按钮用来移动到主屏幕。</string>
+    <string name="tutorial_traits_1">在菜单添加性状创建一个新的性状。不能同时使用键盘和教程。数据收集有不同性状的格式。</string>
+    <string name="tutorial_traits_2">为了导入性状文件，请按菜单键并选择导入</string>
+    <string name="tutorial_traits_3">有关性状建立，额外信息请查阅咨询应用程序手册。</string>
+    <string name="warning_field_before_traits">在性状被建立之前，必须导入一个田间。</string>
+    <string name="warning_field_missing">当前无田间加载的是没有字段。</string>
+    <string name="warning_traits_missing">没有性状存在。请在收集数据之前，创建性状。</string>
+    <string name="database_reset">重置数据库</string>
+    <string name="database_reset_warning1">重置将删除所有数据.你肯定吗</string>
+    <string name="database_reset_warning2">此操作不是可逆的.该应用程序将清除数据库后停止.你仍然要继续吗?</string>
+    <string name="database_dialog_title">数据库</string>
+    <string name="database_reset_message">数据库已被删除</string>
+    <string name="database_import">导入数据库</string>
+    <string name="database_export">导出数据库</string>
+    <string name="export_format_title">格式</string>
+    <string name="export_content_columns_all">所有田间列数</string>
+    <string name="export_content_traits_all">所有性状</string>
     <string name="traits_format_photo">照片</string>
     <string name="play">播放</string>
     <string name="capture">捕获</string>
@@ -152,8 +152,8 @@
     <string name="fields_load">装载</string>
     <string name="traits_options_delete">删除</string>
     <string name="fields_date_imported">导入日期</string>
-    <string name="exporttraiterror">不存在的数据导出</string>
-    <string name="tipsdesc">您希望启用教程吗？此设置可以在高级设置中更改。</string>
+    <string name="export_error_data_missing">不存在的数据导出</string>
+    <string name="tutorial_dialog_description">您希望启用教程吗？此设置可以在高级设置中更改。</string>
     <string name="dialog_cancel">取消</string>
     <string name="rangechime">通知声音当主顺序变更</string>
     <string name="traits_create_photo_maximum">照片的最大数目</string>
