--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -22,15 +22,15 @@
     <string name="main_toolbar_lock_data">বন্ধ উপাত্ত</string>
     <string name="main_toolbar_unlock_data">খোলা উপাত্ত</string>
     <!-- Trait layouts and messages -->
-    <string name="minusday">- ১</string>
+    <string name="trait_layout_date_minusday">- ১</string>
     <string name="enter">প্রবেশ করানো</string>
-    <string name="plusday">+ ১</string>
+    <string name="trait_layout_date_plusday">+ ১</string>
     <string name="nodate">উপাত্ত নাই</string>
     <string name="record">নথি</string>
     <string name="play">চালু করানো</string>
     <string name="capture">ধারণ করানো</string>
     <string name="stop">বন্ধ কর</string>
-    <string name="stored">উপাত্ত সংরক্ষিত হয়েছে</string>
+    <string name="trait_layout_data_stored">উপাত্ত সংরক্ষিত হয়েছে</string>
     <string name="hardwaremissing">এই চরিত্রের জন্য আপনার যন্ত্র প্রয়োজনীয় হার্ডওয়্যার ধারণ করে না</string>
     <string name="photomissing">ছবি অনুপস্থিত</string>
     <string name="photodecodefail">ছবি দেখা যাই না</string>
@@ -46,7 +46,7 @@
     <string name="settings_export">দিয়ে দেয়া</string>
     <string name="settings_advanced">অগ্রসরমান</string>
     <string name="preferences_interface_language">ভাষা</string>
-    <string name="settings_changelog_title">লগ পরিবর্তন</string>
+    <string name="changelog_title">লগ পরিবর্তন</string>
     <string name="startup_sample_data_title">নমুনা উপাত্ত</string>
     <string name="startup_sample_data_message">সরবরাহকৃত নমুনা উপাত্ত কি লোড করতে চান ?</string>
     <!-- Traits -->
@@ -89,7 +89,7 @@
     <string name="traits_create_warning_numeric_required">নির্দিষ্টতা, সর্বনিম্ন, এবং সরবুচ্চ এগুলো অবশ্যই নম্বর হতে হবে</string>
     <string name="traits_create_warning_categories_required">শ্রেণি/বিভাগ ফাকা থাকতে পারে না</string>
     <!-- Advanced settings -->
-    <string name="tips">শিক্ষাদান সম্পর্কিত</string>
+    <string name="preferences_interface_tutorial">শিক্ষাদান সম্পর্কিত</string>
     <string name="quickgoto">দ্রুত গমন করুন</string>
     <string name="cycle">পরবর্তী বৈশিষ্ট্যে চক্রাকারে গমন করে</string>
     <string name="useday">বছর এর দিনটি ব্যাবহার করুন</string>
@@ -122,32 +122,32 @@
     <string name="main_toolbar_barcode_scan_title">বারকোড স্ক্যান করুন</string>
     <string name="main_toolbar_moveto_scan">স্ক্যান করুন</string>
     <!-- Tutorial -->
-    <string name="tutorial">টিউটোরিয়াল</string>
-    <string name="tipsdesc">আপনি কি টিউটোরিয়াল সক্ষম করতে চান? এই সাজানোকে অতিরিক্তমাত্রায় সাজানোতে পরিবর্তন করা যায়</string>
-    <string name="prev">পূর্ববর্তী</string>
-    <string name="next">পরবর্তী</string>
-    <string name="mhelp1">স্ক্রিনের উপরের তথ্যবার প্রত্যেকটি এন্ট্রির জন্য অতিরিক্ত উপাত্ত প্রদর্শন করে । এগুলো নিচের মেনু ব্যাবহার করে পরিবর্তন করা যায়</string>
-    <string name="mhelp2">বড় কালো তীর চিহ্ন এন্ট্রির মধ্যে পরিবর্তন ঘটায়। ছোট সবুজ তীর চিহ্ন বৈশিষ্ট্যের মধ্যে পরিবর্তন ঘটায়</string>
-    <string name="mhelp3">যখন বর্তমান বৈশিষ্ট্যে চাপ দেয়া হয় তখন সক্রিয় বৈশিষ্ট্যসমূহের তালিকা প্রদর্শিত হয়</string>
-    <string name="mhelp4">ফোল্ডার আইকন তার ভিতরে নথির তালিকা প্রদর্শন করে</string>
-    <string name="mhelp5">অনুসন্ধান আইকন ডাটাবেজ খুঁজে দিতে সহায়াতা করে</string>
-    <string name="mhelp6">ডকুমেন্ট আইকন প্রদত্ত এন্ট্রির সকল উপাত্তের সারসংক্ষেপ প্রদর্শন করে</string>
-    <string name="mhelp7">নিচে বামের নেভিগেশন ড্রয়ারে অন্যান্য সকল অপশন আছে</string>
-    <string name="shelp1">ক্ষেত্র পাঠাতে এবং বাবস্থাপনা করতে, ক্ষেত্র নির্বাচন করুন।</string>
-    <string name="shelp2">বৈশিষ্ট্য যোগ করন, উঠানো, অথবা বাবস্থা করার জন্য বৈশিষ্ট্যটি নির্বাচন করুন</string>
-    <string name="shelp3">বাক্তি বা স্থান সেট করার জন্য প্রোফাইল নির্বাচন করুন</string>
-    <string name="shelp4">উপাত্ত এক্সপোর্ট করার জন্য এক্সপোর্ট নির্বাচন করুন। দুটি ফরম্যাটে উপাত্ত এক্সপোর্ট করা যায় ঃ ডাটাবেজ অথবা ছক । মূল এক্সপোর্টেট নথি থেকে কলামকে রাখাও যায় আবার বাদও দেয়া যায়</string>
-    <string name="shelp5">এডভান্সড সেটিং এ কিভাবে উপাত্ত সংগ্রহ করা হয় তার কিছু অপশনাল সেটিং থাকে</string>
-    <string name="shelp6">উপাত্ত উঠানো হয়ে গেলে উপরের বাম কোনার ব্যাক বোতাম আপনাকে মেইন স্ক্রিনে নিয়ে যাবে</string>
-    <string name="thelp1">বৈশিষ্ট্য যোগ করুন মেনুটি নতুন বৈশিষ্ট্য তৈরি করে। একই সময়ে কীবোর্ড এবং টিউটোরিয়ালের ব্যাবহার সম্ভব নয়। বিভিন্ন বৈশিষ্ট্যের ফরম্যাটে বিভিন্ন লেআউট থাকে।</string>
-    <string name="thelp2">বৈশিষ্ট্যের নথি পাঠানোর জন্য টুলবারের ইম্পরটটি পছন্দ করুন।</string>
-    <string name="thelp3">বৈশিষ্ট্য সৃষ্টির অতিরিক্ত তথ্যের জন্য অ্যাপ ম্যানুয়ালটি দেখুন।</string>
-    <string name="thelp4">মেইন সংগ্রহকারী স্ক্রিনে কোন বৈশিষ্ট্য দেখতে চেকবক্স ব্যাবহার করুন। যে সকল বৈশিষ্ট্যের উপাত্ত সংগ্রহ করতে না চান তাদেরকে আনচেক করুন।</string>
-    <string name="thelp5">সেটিং স্ক্রিনে ফেরত যাওয়ার জন্য উপরের বাম কোনার ব্যাক বোতাম চাপুন।</string>
-    <string name="fhelp1">টুলবারে ক্ষেত্র সংযোজন কোন ক্ষেত্র নথিকে পাঠাতে অনুমতি দেয়।</string>
-    <string name="fhelp2">নথিতে অবশ্যই তিনটি কলাম থাকবেঃ একটি একক পরিচায়ক, একটি প্রাইমারি অর্ডার, এবং একটি সেকেন্ডারি অর্ডার। ক্ষেত্রের ভিতরে যাতায়াতের জন্য প্রাইমারি ও সেকেন্ডারি অর্ডার ব্যাবহার করা হয়।</string>
-    <string name="fhelp3">বাদামী রেডিও বোতাম বিশিষ্ট ক্ষেত্রটি হচ্ছে বর্তমানে সক্রিয় ক্ষেত্র।</string>
-    <string name="fhelp4">কোন ক্ষেত্র মুছতে চাইলে ক্ষেত্রের নামের বামের মেনুটি খুলুন এবং মুছে ফেলা নির্বাচন করুন।</string>
+    <string name="tutorial_dialog_title">টিউটোরিয়াল</string>
+    <string name="tutorial_dialog_description">আপনি কি টিউটোরিয়াল সক্ষম করতে চান? এই সাজানোকে অতিরিক্তমাত্রায় সাজানোতে পরিবর্তন করা যায়</string>
+    <string name="tutorial_previous">পূর্ববর্তী</string>
+    <string name="tutorial_next">পরবর্তী</string>
+    <string name="tutorial_main_1">স্ক্রিনের উপরের তথ্যবার প্রত্যেকটি এন্ট্রির জন্য অতিরিক্ত উপাত্ত প্রদর্শন করে । এগুলো নিচের মেনু ব্যাবহার করে পরিবর্তন করা যায়</string>
+    <string name="tutorial_main_2">বড় কালো তীর চিহ্ন এন্ট্রির মধ্যে পরিবর্তন ঘটায়। ছোট সবুজ তীর চিহ্ন বৈশিষ্ট্যের মধ্যে পরিবর্তন ঘটায়</string>
+    <string name="tutorial_main_3">যখন বর্তমান বৈশিষ্ট্যে চাপ দেয়া হয় তখন সক্রিয় বৈশিষ্ট্যসমূহের তালিকা প্রদর্শিত হয়</string>
+    <string name="tutorial_main_4">ফোল্ডার আইকন তার ভিতরে নথির তালিকা প্রদর্শন করে</string>
+    <string name="tutorial_main_5">অনুসন্ধান আইকন ডাটাবেজ খুঁজে দিতে সহায়াতা করে</string>
+    <string name="tutorial_main_6">ডকুমেন্ট আইকন প্রদত্ত এন্ট্রির সকল উপাত্তের সারসংক্ষেপ প্রদর্শন করে</string>
+    <string name="tutorial_main_7">নিচে বামের নেভিগেশন ড্রয়ারে অন্যান্য সকল অপশন আছে</string>
+    <string name="tutorial_settings_1">ক্ষেত্র পাঠাতে এবং বাবস্থাপনা করতে, ক্ষেত্র নির্বাচন করুন।</string>
+    <string name="tutorial_settings_2">বৈশিষ্ট্য যোগ করন, উঠানো, অথবা বাবস্থা করার জন্য বৈশিষ্ট্যটি নির্বাচন করুন</string>
+    <string name="tutorial_settings_3">বাক্তি বা স্থান সেট করার জন্য প্রোফাইল নির্বাচন করুন</string>
+    <string name="tutorial_settings_4">উপাত্ত এক্সপোর্ট করার জন্য এক্সপোর্ট নির্বাচন করুন। দুটি ফরম্যাটে উপাত্ত এক্সপোর্ট করা যায় ঃ ডাটাবেজ অথবা ছক । মূল এক্সপোর্টেট নথি থেকে কলামকে রাখাও যায় আবার বাদও দেয়া যায়</string>
+    <string name="tutorial_settings_5">এডভান্সড সেটিং এ কিভাবে উপাত্ত সংগ্রহ করা হয় তার কিছু অপশনাল সেটিং থাকে</string>
+    <string name="tutorial_settings_6">উপাত্ত উঠানো হয়ে গেলে উপরের বাম কোনার ব্যাক বোতাম আপনাকে মেইন স্ক্রিনে নিয়ে যাবে</string>
+    <string name="tutorial_traits_1">বৈশিষ্ট্য যোগ করুন মেনুটি নতুন বৈশিষ্ট্য তৈরি করে। একই সময়ে কীবোর্ড এবং টিউটোরিয়ালের ব্যাবহার সম্ভব নয়। বিভিন্ন বৈশিষ্ট্যের ফরম্যাটে বিভিন্ন লেআউট থাকে।</string>
+    <string name="tutorial_traits_2">বৈশিষ্ট্যের নথি পাঠানোর জন্য টুলবারের ইম্পরটটি পছন্দ করুন।</string>
+    <string name="tutorial_traits_3">বৈশিষ্ট্য সৃষ্টির অতিরিক্ত তথ্যের জন্য অ্যাপ ম্যানুয়ালটি দেখুন।</string>
+    <string name="tutorial_traits_4">মেইন সংগ্রহকারী স্ক্রিনে কোন বৈশিষ্ট্য দেখতে চেকবক্স ব্যাবহার করুন। যে সকল বৈশিষ্ট্যের উপাত্ত সংগ্রহ করতে না চান তাদেরকে আনচেক করুন।</string>
+    <string name="tutorial_traits_5">সেটিং স্ক্রিনে ফেরত যাওয়ার জন্য উপরের বাম কোনার ব্যাক বোতাম চাপুন।</string>
+    <string name="tutorial_fields_1">টুলবারে ক্ষেত্র সংযোজন কোন ক্ষেত্র নথিকে পাঠাতে অনুমতি দেয়।</string>
+    <string name="tutorial_fields_2">নথিতে অবশ্যই তিনটি কলাম থাকবেঃ একটি একক পরিচায়ক, একটি প্রাইমারি অর্ডার, এবং একটি সেকেন্ডারি অর্ডার। ক্ষেত্রের ভিতরে যাতায়াতের জন্য প্রাইমারি ও সেকেন্ডারি অর্ডার ব্যাবহার করা হয়।</string>
+    <string name="tutorial_fields_3">বাদামী রেডিও বোতাম বিশিষ্ট ক্ষেত্রটি হচ্ছে বর্তমানে সক্রিয় ক্ষেত্র।</string>
+    <string name="tutorial_fields_4">কোন ক্ষেত্র মুছতে চাইলে ক্ষেত্রের নামের বামের মেনুটি খুলুন এবং মুছে ফেলা নির্বাচন করুন।</string>
     <!-- About dialog -->
 
     <string name="about_title">সম্বন্ধে</string>
@@ -160,22 +160,22 @@
     <string name="about_other_apps_title">অন্যান্য অ্যাপ্স।</string>
 
     <!-- Export dialog -->
-    <string name="dbformat">ডাটাবেজ</string>
-    <string name="tableformat">ছক</string>
-    <string name="filename">নথির নাম</string>
-    <string name="headerformat">ফরম্যাট</string>
-    <string name="allcolumns">সকল ইম্পরটেট কলাম</string>
-    <string name="fieldcolumns">ক্ষেত্র কলাম</string>
-    <string name="onlyunique">শুধুমাত্র একক পরিচায়ক</string>
-    <string name="alltraits">সকল বৈশিষ্ট্য</string>
-    <string name="activetraits">শুধুমাত্র সক্রিয় বৈশিষ্ট্যসমূহ</string>
-    <string name="exporterror">পাঠানোর সময় সমস্যা</string>
-    <string name="exportcomplete">পাঠানো সম্পন্ন</string>
-    <string name="exportmsg">পাঠানো হচ্ছে</string>
-    <string name="noexportcheck">পাঠানোর ধরন অবশ্যই নির্বাচিত থাকতে হবে</string>
-    <string name="nofieldcheck">ক্ষেত্র কলামের ধরন অবশ্যই নির্বাচিত থাকতে হবে</string>
-    <string name="notraitcheck">বৈশিষ্ট্যের ধরন অবশ্যই নির্বাচিত থাকতে হবে</string>
-    <string name="overwrite_previous_export">পূর্বের পাঠানো নথির উপরে লিখুন</string>
+    <string name="export_format_database">ডাটাবেজ</string>
+    <string name="export_format_table">ছক</string>
+    <string name="export_file_name">নথির নাম</string>
+    <string name="export_format_title">ফরম্যাট</string>
+    <string name="export_content_columns_all">সকল ইম্পরটেট কলাম</string>
+    <string name="export_content_columns_title">ক্ষেত্র কলাম</string>
+    <string name="export_content_columns_unique">শুধুমাত্র একক পরিচায়ক</string>
+    <string name="export_content_traits_all">সকল বৈশিষ্ট্য</string>
+    <string name="export_content_traits_active">শুধুমাত্র সক্রিয় বৈশিষ্ট্যসমূহ</string>
+    <string name="export_error_general">পাঠানোর সময় সমস্যা</string>
+    <string name="export_complete">পাঠানো সম্পন্ন</string>
+    <string name="export_progress">পাঠানো হচ্ছে</string>
+    <string name="export_error_missing_format">পাঠানোর ধরন অবশ্যই নির্বাচিত থাকতে হবে</string>
+    <string name="export_error_missing_column">ক্ষেত্র কলামের ধরন অবশ্যই নির্বাচিত থাকতে হবে</string>
+    <string name="export_error_missing_trait">বৈশিষ্ট্যের ধরন অবশ্যই নির্বাচিত থাকতে হবে</string>
+    <string name="export_overwrite">পূর্বের পাঠানো নথির উপরে লিখুন</string>
     <!-- Language dialog -->
     <string name="english">English (US)</string>
     <string name="spanish">Español (México)</string>
@@ -213,30 +213,30 @@
     <string name="profile_location_longitude">দ্রাঘিমাংশ</string>
     <string name="profile_get_location">স্থান দেখুন</string>
     <!-- Database dialog -->
-    <string name="dbbackup">ডাটাবেজ</string>
-    <string name="resetcomplete">ডাটাবেজ মুছে ফেলা হয়েছে</string>
-    <string name="dbimport">ডাটাবেজ উঠান</string>
-    <string name="dbexport">ডাটাবেজ পাঠান</string>
-    <string name="dbreset">ডাটাবেজ পুনস্থাপন করুন</string>
-    <string name="resetwarning1">পুনস্থাপনের সময় সমস্ত উপাত্ত মুছে যাবে। আপনি কি ডাটাবেজ পুনস্থাপন করতে চান?</string>
-    <string name="resetwarning2">কোন ডাটাবেজ পুনস্থাপন করলে তা পুনরায় ফিরে পাওয়া যায় না। ডাটাবেজ পরিষ্কারের পর অ্যাপ বন্ধ হবে। আপনি কি প্রকৃতপক্ষেই নিশ্চিত যে আপনি অগ্রসর হতে চান?</string>
+    <string name="database_dialog_title">ডাটাবেজ</string>
+    <string name="database_reset_message">ডাটাবেজ মুছে ফেলা হয়েছে</string>
+    <string name="database_import">ডাটাবেজ উঠান</string>
+    <string name="database_export">ডাটাবেজ পাঠান</string>
+    <string name="database_reset">ডাটাবেজ পুনস্থাপন করুন</string>
+    <string name="database_reset_warning1">পুনস্থাপনের সময় সমস্ত উপাত্ত মুছে যাবে। আপনি কি ডাটাবেজ পুনস্থাপন করতে চান?</string>
+    <string name="database_reset_warning2">কোন ডাটাবেজ পুনস্থাপন করলে তা পুনরায় ফিরে পাওয়া যায় না। ডাটাবেজ পরিষ্কারের পর অ্যাপ বন্ধ হবে। আপনি কি প্রকৃতপক্ষেই নিশ্চিত যে আপনি অগ্রসর হতে চান?</string>
     <!-- Import dialog -->
-    <string name="importfields">ক্ষেত্র উঠান</string>
-    <string name="importunique">একক পরিচায়ক</string>
-    <string name="importfirst">প্রাথমিক অর্ডার</string>
-    <string name="importsecond">সেকেন্ডারি অর্ডার</string>
-    <string name="importmsg">অনুগ্রহপূর্বক অপেক্ষা করুন</string>
-    <string name="importerror">পাঠানোর সময় সমস্যা</string>
-    <string name="importuniqueerror">একক পরিচায়ক ডুপ্লিকেট হয়েছে</string>
-    <string name="notsupported">এই ধরনের নথি বর্তমানে সাপোর্ট করেনা</string>
-    <string name="columnfail">কলামের নামে অনাকাঙ্ক্ষিত চরিত্র বা শব্দ আছে</string>
-    <string name="colnamesdif">একই এসাইনমেনট এর জন্য কলামসমূহ ব্যাবহার করা যায় না</string>
+    <string name="import_dialog_title">ক্ষেত্র উঠান</string>
+    <string name="import_dialog_unique">একক পরিচায়ক</string>
+    <string name="import_dialog_primary">প্রাথমিক অর্ডার</string>
+    <string name="import_dialog_secondary">সেকেন্ডারি অর্ডার</string>
+    <string name="import_dialog_importing">অনুগ্রহপূর্বক অপেক্ষা করুন</string>
+    <string name="import_error_general">পাঠানোর সময় সমস্যা</string>
+    <string name="import_error_unique">একক পরিচায়ক ডুপ্লিকেট হয়েছে</string>
+    <string name="import_error_unsupported">এই ধরনের নথি বর্তমানে সাপোর্ট করেনা</string>
+    <string name="import_error_columns">কলামের নামে অনাকাঙ্ক্ষিত চরিত্র বা শব্দ আছে</string>
+    <string name="import_error_column_choice">একই এসাইনমেনট এর জন্য কলামসমূহ ব্যাবহার করা যায় না</string>
     <!-- Warnings/Catches -->
-    <string name="importtraitwarning">কোন বৈশিষ্ট্য তৈরি করতে চাইলে তার পূর্বে অবশ্যই ক্ষেত্র ইম্পরট করতে হবে।</string>
-    <string name="nofieldloaded">কোন ক্ষেত্রই বর্তমানে লোড করা নাই। উপাত্ত সংগ্রহের পূর্বে অনুগ্রহপূর্বক ক্ষেত্র লোড করুন।</string>
-    <string name="notraitloaded">কোন বৈশিষ্ট্যই উপাস্থিত নেই। উপাত্ত সংগ্রহের পূর্বে অনুগ্রহপূর্বক বৈশিষ্ট্য সৃষ্টি করুন।</string>
-    <string name="createtraitserror">বৈশিষ্ট্য তৈরি করুন তাদেরকে পরিবর্তনের পূর্বেই।</string>
-    <string name="exporttraiterror">পাঠানোর জন্য কোন উপাত্ত নেই</string>
+    <string name="warning_field_before_traits">কোন বৈশিষ্ট্য তৈরি করতে চাইলে তার পূর্বে অবশ্যই ক্ষেত্র ইম্পরট করতে হবে।</string>
+    <string name="warning_field_missing">কোন ক্ষেত্রই বর্তমানে লোড করা নাই। উপাত্ত সংগ্রহের পূর্বে অনুগ্রহপূর্বক ক্ষেত্র লোড করুন।</string>
+    <string name="warning_traits_missing">কোন বৈশিষ্ট্যই উপাস্থিত নেই। উপাত্ত সংগ্রহের পূর্বে অনুগ্রহপূর্বক বৈশিষ্ট্য সৃষ্টি করুন।</string>
+    <string name="warning_traits_missing_modify">বৈশিষ্ট্য তৈরি করুন তাদেরকে পরিবর্তনের পূর্বেই।</string>
+    <string name="export_error_data_missing">পাঠানোর জন্য কোন উপাত্ত নেই</string>
     <!-- Search dialog -->
     <string name="search_results_dialog_title">অনুসন্ধান ফল</string>
     <string name="search_results_dialog_range">ব্যাপ্তি</string>
