--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">Agregar</string>
     <string name="search_dialog_clear">Borrar</string>
     <string name="dialog_close">Cerrar</string>
-    <string name="minusday">-1 Día</string>
+    <string name="trait_layout_date_minusday">-1 Día</string>
     <string name="enter">Enter</string>
-    <string name="plusday">+1 Día</string>
+    <string name="trait_layout_date_plusday">+1 Día</string>
     <string name="record">Grabar</string>
     <string name="dialog_ok">OK</string>
     <string name="stop">Detener</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">Error</string>
     <string name="valueless">El valor es menor que el mínimo</string>
     <string name="valuemore">El valor es mayor que el máximo</string>
-    <string name="settings_changelog_title">Cambios</string>
+    <string name="changelog_title">Cambios</string>
     <string name="main_toolbar_moveto_no_match">Valor no coincide</string>
     <string name="dialog_warning">Advertencia</string>
-    <string name="exporterror">La exportación ha fallado</string>
-    <string name="exportcomplete">Exportación ha sido completada</string>
+    <string name="export_error_general">La exportación ha fallado</string>
+    <string name="export_complete">Exportación ha sido completada</string>
     <string name="profile_person_title">Escoger usuario</string>
     <string name="profile_location_title">Escoger ubicación</string>
     <string name="about_title">Acerca de</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">Longitud:</string>
     <string name="profile_get_location">Obtener ubicación</string>
     <string name="ignoreentries">Ocultar entradas con datos</string>
-    <string name="dbformat">Base de Datos</string>
-    <string name="tableformat">Tabla</string>
-    <string name="filename">Nombre de archivo</string>
+    <string name="export_format_database">Base de Datos</string>
+    <string name="export_format_table">Tabla</string>
+    <string name="export_file_name">Nombre de archivo</string>
     <string name="drop1">Barra desplegable 1</string>
     <string name="drop2">Barra desplegable 2</string>
     <string name="drop3">Barra desplegable 3</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">es mayor que</string>
     <string name="search_dialog_query_is_less_than">es menor que</string>
     <string name="search_results_missing">Búsqueda no produjo resultados</string>
-    <string name="importunique">Identificador único (ID)</string>
-    <string name="importfirst">Nivel de Primer Orden</string>
-    <string name="importsecond">Nivel de Segundo Orden</string>
-    <string name="importfields">Importar archivo de campo</string>
-    <string name="importmsg">Espere...</string>
-    <string name="importerror">Hubo un error durante importación</string>
-    <string name="importuniqueerror">Identificador único (ID) tiene duplicados</string>
+    <string name="import_dialog_unique">Identificador único (ID)</string>
+    <string name="import_dialog_primary">Nivel de Primer Orden</string>
+    <string name="import_dialog_secondary">Nivel de Segundo Orden</string>
+    <string name="import_dialog_title">Importar archivo de campo</string>
+    <string name="import_dialog_importing">Espere...</string>
+    <string name="import_error_general">Hubo un error durante importación</string>
+    <string name="import_error_unique">Identificador único (ID) tiene duplicados</string>
     <string name="traits_toolbar_add_trait">Agregar Variable</string>
     <string name="traits_create_format">Formato</string>
     <string name="traits_create_value_default">Predeterminado</string>
@@ -97,47 +97,47 @@
     <string name="settings_advanced">Configuración avanzada</string>
     <string name="traits_create_categories_text">Separar categorías usando /</string>
     <string name="main_infobar_no_data">No hay datos</string>
-    <string name="noexportcheck">Formato de archivo debe ser seleccionado</string>
+    <string name="export_error_missing_format">Formato de archivo debe ser seleccionado</string>
     <string name="search_results_dialog_title">Buscar resultados</string>
-    <string name="tips">Habilitar el tutorial</string>
+    <string name="preferences_interface_tutorial">Habilitar el tutorial</string>
     <string name="cycle">Avanzar a la siguiente parcela y primera variable de la lista.</string>
     <string name="useday">Utilice número del día del año en lugar de fecha</string>
-    <string name="columnfail">Columna tiene nombres con caracteres no permitidos</string>
-    <string name="prev">Anterior</string>
-    <string name="next">Siguiente</string>
-    <string name="stored">Datos han sido guardados</string>
+    <string name="import_error_columns">Columna tiene nombres con caracteres no permitidos</string>
+    <string name="tutorial_previous">Anterior</string>
+    <string name="tutorial_next">Siguiente</string>
+    <string name="trait_layout_data_stored">Datos han sido guardados</string>
     <string name="traits_create_optional">Opcional</string>
-    <string name="exportmsg">Exportando...</string>
+    <string name="export_progress">Exportando...</string>
     <string name="english">English</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">Tutorial</string>
-    <string name="mhelp1">Las barras desplegables en la parte superior de la pantalla muestran información de la columna escogida o seleccionada. Éstas pueden ser cambiadas en el menú Congfiguración.</string>
-    <string name="mhelp2">Las flechas grandes y negras permiten mover de entrada a entrada o de parcela a parcela. Las flechas azules y pequeñas permiten mover de variable a variable.</string>
-    <string name="mhelp3">Cuando una variable activa es seleccionada o presionada, aparecerá una barra desplegable con la lista de variables habilitadas.</string>
-    <string name="mhelp4">El área de texto del nivel de primer y segundo orden se puede usar para desplazarse a la primera aparición de un valor específico.</string>
-    <string name="mhelp5">Buscar en la parter superior de la pantalla permite la búsqueda de entradas.</string>
-    <string name="shelp1">Para importar archivos en formato CSV o XLS seleccione Campos</string>
-    <string name="shelp2">Después de cargar un archivo de campo, las columnas del archivo aparecerán de lado izquierdo y el tipo de dato se podrá configurar en el lado derecho. Todo archivo de campo debe contener tres columnas: un identifcador único (ID), nivel de primer y segundo orden.</string>
-    <string name="shelp3">Para agregar o importar nuevas variables para evaluar, presione Variable.</string>
-    <string name="shelp4">Para finalizar la configuración de los datos a evaluar escoja Configuración.</string>
-    <string name="shelp5">En el menú Configuración: Usuario es la persona que hará/registrará los datos evaluados, Ubicación son las coordenadas asociadas al campo, Variables permite al usuario escoger las variables a evaluar en la pantalla principal, Barra desplegable permite al usuario mostrar tres líneas de información adicional en la pantalla principal.</string>
-    <string name="shelp6">Una vez que los datos fueron importados, el botón atrás en la esquina superior izquierda lo llevará a la pantalla principal.</string>
-    <string name="thelp1">Agregar Variable en el menú creará un nueva variable. No podrá usar el teclado y el tutorial al mismo tiempo, desactive el tutorial si desea agregar una nueva variable. Hay diferentes tipos de formatos disponibles para las variables que deseé usted evaluar.</string>
-    <string name="thelp2">Para importar archivos de variables, presione el botón Menú y escoja la opción Importar.</string>
-    <string name="thelp3">Consulte el manual del app para leer sobre información adicional con respecto a la creación de variables.</string>
-    <string name="importtraitwarning">Un archivo de campo debe ser importado antes de elaborar la lista de variables a evaluar.</string>
-    <string name="nofieldloaded">El archivo de campo no ha sido cargado. Por favor cargue la lista de campo antes de hacer sus evaluaciones.</string>
-    <string name="notraitloaded">Variables no existen. Elabore una variable o lista de variables antes de hacer sus evaluaciones.</string>
-    <string name="dbreset">Borrar la Base de datos</string>
-    <string name="resetwarning1">Todos los datos serán eliminados. ¿Seguro(a)?</string>
-    <string name="resetwarning2">Esta acción es irreversible. Cuando la Base de Datos este vacía el app se cerrará. ¿Desea continuar?</string>
-    <string name="dbbackup">Base de Datos</string>
-    <string name="resetcomplete">Base de Datos ha sido eliminada</string>
-    <string name="dbimport">Importar Base de Datos</string>
-    <string name="dbexport">Exportar Base de Datos</string>
-    <string name="headerformat">Formato</string>
-    <string name="allcolumns">Todas las columnas de campo.</string>
-    <string name="alltraits">Todas las variables</string>
+    <string name="tutorial_dialog_title">Tutorial</string>
+    <string name="tutorial_main_1">Las barras desplegables en la parte superior de la pantalla muestran información de la columna escogida o seleccionada. Éstas pueden ser cambiadas en el menú Congfiguración.</string>
+    <string name="tutorial_main_2">Las flechas grandes y negras permiten mover de entrada a entrada o de parcela a parcela. Las flechas azules y pequeñas permiten mover de variable a variable.</string>
+    <string name="tutorial_main_3">Cuando una variable activa es seleccionada o presionada, aparecerá una barra desplegable con la lista de variables habilitadas.</string>
+    <string name="tutorial_main_4">El área de texto del nivel de primer y segundo orden se puede usar para desplazarse a la primera aparición de un valor específico.</string>
+    <string name="tutorial_main_5">Buscar en la parter superior de la pantalla permite la búsqueda de entradas.</string>
+    <string name="tutorial_settings_1">Para importar archivos en formato CSV o XLS seleccione Campos</string>
+    <string name="tutorial_settings_2">Después de cargar un archivo de campo, las columnas del archivo aparecerán de lado izquierdo y el tipo de dato se podrá configurar en el lado derecho. Todo archivo de campo debe contener tres columnas: un identifcador único (ID), nivel de primer y segundo orden.</string>
+    <string name="tutorial_settings_3">Para agregar o importar nuevas variables para evaluar, presione Variable.</string>
+    <string name="tutorial_settings_4">Para finalizar la configuración de los datos a evaluar escoja Configuración.</string>
+    <string name="tutorial_settings_5">En el menú Configuración: Usuario es la persona que hará/registrará los datos evaluados, Ubicación son las coordenadas asociadas al campo, Variables permite al usuario escoger las variables a evaluar en la pantalla principal, Barra desplegable permite al usuario mostrar tres líneas de información adicional en la pantalla principal.</string>
+    <string name="tutorial_settings_6">Una vez que los datos fueron importados, el botón atrás en la esquina superior izquierda lo llevará a la pantalla principal.</string>
+    <string name="tutorial_traits_1">Agregar Variable en el menú creará un nueva variable. No podrá usar el teclado y el tutorial al mismo tiempo, desactive el tutorial si desea agregar una nueva variable. Hay diferentes tipos de formatos disponibles para las variables que deseé usted evaluar.</string>
+    <string name="tutorial_traits_2">Para importar archivos de variables, presione el botón Menú y escoja la opción Importar.</string>
+    <string name="tutorial_traits_3">Consulte el manual del app para leer sobre información adicional con respecto a la creación de variables.</string>
+    <string name="warning_field_before_traits">Un archivo de campo debe ser importado antes de elaborar la lista de variables a evaluar.</string>
+    <string name="warning_field_missing">El archivo de campo no ha sido cargado. Por favor cargue la lista de campo antes de hacer sus evaluaciones.</string>
+    <string name="warning_traits_missing">Variables no existen. Elabore una variable o lista de variables antes de hacer sus evaluaciones.</string>
+    <string name="database_reset">Borrar la Base de datos</string>
+    <string name="database_reset_warning1">Todos los datos serán eliminados. ¿Seguro(a)?</string>
+    <string name="database_reset_warning2">Esta acción es irreversible. Cuando la Base de Datos este vacía el app se cerrará. ¿Desea continuar?</string>
+    <string name="database_dialog_title">Base de Datos</string>
+    <string name="database_reset_message">Base de Datos ha sido eliminada</string>
+    <string name="database_import">Importar Base de Datos</string>
+    <string name="database_export">Exportar Base de Datos</string>
+    <string name="export_format_title">Formato</string>
+    <string name="export_content_columns_all">Todas las columnas de campo.</string>
+    <string name="export_content_traits_all">Todas las variables</string>
     <string name="traits_format_photo">Imagen</string>
     <string name="play">Tocar</string>
     <string name="capture">Capturar</string>
@@ -151,8 +151,8 @@
     <string name="fields_load">Cargar</string>
     <string name="traits_options_delete">Eliminar</string>
     <string name="fields_date_imported">Fecha importada</string>
-    <string name="exporttraiterror">No hay datos para exportar.</string>
-    <string name="tipsdesc">¿Desea habilitar el tutorial? Puede campiar esta opción en Configuración avanzada.</string>
+    <string name="export_error_data_missing">No hay datos para exportar.</string>
+    <string name="tutorial_dialog_description">¿Desea habilitar el tutorial? Puede campiar esta opción en Configuración avanzada.</string>
     <string name="dialog_cancel">Cancelar</string>
     <string name="rangechime">Habilitar sonido cuando orden de primer nivel cambie.</string>
     <string name="traits_create_photo_maximum">Número máximo de imágenes</string>
