--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">जोड़ें</string>
     <string name="search_dialog_clear">मिटाएँ</string>
     <string name="dialog_close">बंद करें</string>
-    <string name="minusday">एक दिन घटाएँ</string>
+    <string name="trait_layout_date_minusday">एक दिन घटाएँ</string>
     <string name="enter">प्रविष्ट करें</string>
-    <string name="plusday">एक दिन जोड़ें</string>
+    <string name="trait_layout_date_plusday">एक दिन जोड़ें</string>
     <string name="record">आवाज़ दर्ज करें</string>
     <string name="dialog_ok">ठीक</string>
     <string name="stop">रोकें</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">त्रुटि</string>
     <string name="valueless">प्रवेश किया मूल्य निर्धारित न्यूनतम से कम</string>
     <string name="valuemore">प्रवेश किया मूल्य निर्धारित अधिकतम से ज़्यादा</string>
-    <string name="settings_changelog_title">पिछले संस्करण से बदलाव</string>
+    <string name="changelog_title">पिछले संस्करण से बदलाव</string>
     <string name="main_toolbar_moveto_no_match">नहीं मिला</string>
     <string name="dialog_warning">चेतावनी</string>
-    <string name="exporterror">निर्यात के दौरान त्रुटि</string>
-    <string name="exportcomplete">निर्यात सम्पूर्ण</string>
+    <string name="export_error_general">निर्यात के दौरान त्रुटि</string>
+    <string name="export_complete">निर्यात सम्पूर्ण</string>
     <string name="profile_person_title">व्यक्ति स्थापित करें</string>
     <string name="profile_location_title">स्थान स्थापित करें</string>
     <string name="about_title">के बारे में</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">देशान्तर</string>
     <string name="profile_get_location">स्थान पाएँ</string>
     <string name="ignoreentries">एकत्रित आंकड़ों वाली प्रविष्टियाँ छुपाएँ</string>
-    <string name="dbformat">आंकड़ा कोष</string>
-    <string name="tableformat">तालिका</string>
-    <string name="filename">फ़ाइल का नाम</string>
+    <string name="export_format_database">आंकड़ा कोष</string>
+    <string name="export_format_table">तालिका</string>
+    <string name="export_file_name">फ़ाइल का नाम</string>
     <string name="drop1">सूचना पट्टी 1</string>
     <string name="drop2">सूचना पट्टी 2</string>
     <string name="drop3">सूचना पट्टी 3</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">अधिक है</string>
     <string name="search_dialog_query_is_less_than">कम है</string>
     <string name="search_results_missing">खोज बेनतीजा रही</string>
-    <string name="importunique">अद्वितीय पहचानकर्ता</string>
-    <string name="importfirst">प्राथमिक क्रम</string>
-    <string name="importsecond">माध्यमिक क्रम</string>
-    <string name="importfields">खेत आयात करें</string>
-    <string name="importmsg">कृपया प्रतीक्षा करें...</string>
-    <string name="importerror">आयात करने में त्रुटि</string>
-    <string name="importuniqueerror">अद्वितीय पहचानकर्ता में नकल</string>
+    <string name="import_dialog_unique">अद्वितीय पहचानकर्ता</string>
+    <string name="import_dialog_primary">प्राथमिक क्रम</string>
+    <string name="import_dialog_secondary">माध्यमिक क्रम</string>
+    <string name="import_dialog_title">खेत आयात करें</string>
+    <string name="import_dialog_importing">कृपया प्रतीक्षा करें...</string>
+    <string name="import_error_general">आयात करने में त्रुटि</string>
+    <string name="import_error_unique">अद्वितीय पहचानकर्ता में नकल</string>
     <string name="traits_toolbar_add_trait">विशेषता जोड़ें</string>
     <string name="traits_create_format">संरूप</string>
     <string name="traits_create_value_default">पूर्व निर्धारित</string>
@@ -97,48 +97,48 @@
     <string name="settings_advanced">उच्च श्रेणी सेटिंग</string>
     <string name="traits_create_categories_text">मदों को / से बाँटें</string>
     <string name="main_infobar_no_data">कोई आंकड़े नहीं</string>
-    <string name="noexportcheck">निर्यात प्रकार चुनना जरूरी है</string>
+    <string name="export_error_missing_format">निर्यात प्रकार चुनना जरूरी है</string>
     <string name="search_results_dialog_title">खोज नतीजे</string>
-    <string name="tips">मदद सक्षम करें</string>
+    <string name="preferences_interface_tutorial">मदद सक्षम करें</string>
     <string name="cycle">पिछली विशेषता से आगे जाना अगली प्रविष्टि की पहली विशेषता पर ले जाता है</string>
     <string name="useday">तारीख की जगह वर्ष के दिन का उपयोग करें</string>
-    <string name="columnfail">पत्रभाग नामों में अवैध अक्षर</string>
-    <string name="prev">पिछला</string>
-    <string name="next">अगला</string>
-    <string name="stored">आंकड़े सुरक्षित कर लिए गए है</string>
+    <string name="import_error_columns">पत्रभाग नामों में अवैध अक्षर</string>
+    <string name="tutorial_previous">पिछला</string>
+    <string name="tutorial_next">अगला</string>
+    <string name="trait_layout_data_stored">आंकड़े सुरक्षित कर लिए गए है</string>
     <string name="traits_create_optional">वैकल्पिक</string>
-    <string name="exportmsg">निर्यात हो रहा है</string>
+    <string name="export_progress">निर्यात हो रहा है</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">मदद</string>
-    <string name="mhelp1">प्रत्येक प्रविष्टि के लिए अतिरिक्त आंकड़े ऊपर सूचना पट्टी में दिखाए जा रहे है। इनको रूपरचना मेनू में बदला जा सकता है।</string>
-    <string name="mhelp2">बड़े, काले तीर के निशान प्रविष्टियाँ संचालित करते हैं। छोटे, नीले तीर के निशान विशेषताएँ संचालित करते है।</string>
-    <string name="mhelp3">सक्षम विशेषताओं की सूची सक्रिय विशेषता को दबाने पर दिखाई जाएगी।</string>
-    <string name="mhelp4">प्राथमिक और माध्यमिक क्रम मूलशब्द भाग को किसी विशिष्ट मूल्य की पहली उपस्थिति पर जाने के लिए प्रयोग किया जा सकता है।</string>
-    <string name="mhelp5">स्क्रीन के ऊपरी तरफ खोजें आंकड़ा कोष जाँच को सक्षम करता है।</string>
-    <string name="shelp1">CSV या XLS फाइल आयात करने के लिए खेत चुनें।</string>
-    <string name="shelp2">फ़ाइल चुनने के बाद, फ़ाइल पत्रभाग स्क्रीन की बाईं तरफ सूचीबद्ध किए गए है और उनके आंकड़ा प्रकार को रूप दाईं तरफ दिया जा सकता है। फाइल में तीन पत्रभाग जरूरी हैं: अद्वितीय पहचानकर्ता, प्राथमिक क्रम, और माध्यमिक क्रम।</string>
-    <string name="shelp3">नई विशेषताएँ जोड़ने या आयात करने के लिए विशेषताएँ दबाएँ।</string>
-    <string name="shelp4">आंकड़े एकत्र करने की तैयारी के लिए रूपरचना मेनू चुनें</string>
-    <string name="shelp5">"रूपरचना स्क्रीन में: 'व्यक्ति' आंकड़े एकत्र करने वाले व्यक्ति का नाम है, 'स्थान' खेत निर्देशांक जमा करता है, 'विशेषताएँ' सक्रिय विशेषताओं का समायोजन करने की अनुमति देता है, और 'सुचना पट्टिआं' मुख्य स्क्रीन पर प्रसंगाधीन प्रविष्टि की सुचना देती हैं"</string>
-    <string name="shelp6">"जब आंकड़े आयात हो जाते हैं, तो मुख्य स्क्रीन पर जाने के लिए ऊपरी बाईं तरफ 'पीछे' बटन का प्रयोग किया जाता है।"</string>
-    <string name="thelp1">"मेनू पर 'विशेषता जोड़ें' नई विशेषता का सिरजन करता है। एक समय पर कीबोर्ड और मदद का उपयोग नहीं किया जा सकता। आंकड़े एकत्र करने के लिए विभिन्न संरूप मौजूद है।"</string>
-    <string name="thelp2">विशेषता फाइलें आयात करने के लिए मेन्यू बटन दबाएं और आयात चुनें।</string>
-    <string name="thelp3">विशेषता निर्माण के बारे में अतिरिक्त जानकारी के लिए एप्लिकेशन मैन्युअल देखें।</string>
-    <string name="importtraitwarning">विशेषताएँ सिरजने से पहले खेत आयात होना जरूरी है।</string>
-    <string name="nofieldloaded">कोई खेत ग्रहण नहीं किया गया है। आंकड़े एकत्र करने से पहले कृपया खेत ग्रहण करें।</string>
-    <string name="notraitloaded">कोई विशेषता मौजूद नहीं है। कृपया आंकड़े एकत्र करने से पहले विशेषताओं का सिरजन करें।</string>
-    <string name="dbreset">आंकड़ा कोष पुनः तैयार करें</string>
-    <string name="resetwarning1">पुनः तैयारी पर सभी आंकड़े मिटा दिए जाएँगे। क्या आप यही चाहते हैं?</string>
-    <string name="resetwarning2">इस क्रिया को उल्टा नहीं जा सकता। एप्लिकेशन आंकड़ा कोष को साफ करने के बाद बंद हो जाएगी। क्या आप अभी भी यही चाहते हैं?</string>
-    <string name="dbbackup">आंकड़ा कोष</string>
-    <string name="resetcomplete">आंकड़ा कोष मिटा दिया गया है</string>
-    <string name="dbimport">आंकड़ा कोष आयात करें</string>
-    <string name="dbexport">आंकड़ा कोष निर्यात करें</string>
-    <string name="headerformat">संरूप</string>
-    <string name="allcolumns">खेत के सभी पत्रभाग</string>
-    <string name="alltraits">सारी विशेषताएँ</string>
+    <string name="tutorial_dialog_title">मदद</string>
+    <string name="tutorial_main_1">प्रत्येक प्रविष्टि के लिए अतिरिक्त आंकड़े ऊपर सूचना पट्टी में दिखाए जा रहे है। इनको रूपरचना मेनू में बदला जा सकता है।</string>
+    <string name="tutorial_main_2">बड़े, काले तीर के निशान प्रविष्टियाँ संचालित करते हैं। छोटे, नीले तीर के निशान विशेषताएँ संचालित करते है।</string>
+    <string name="tutorial_main_3">सक्षम विशेषताओं की सूची सक्रिय विशेषता को दबाने पर दिखाई जाएगी।</string>
+    <string name="tutorial_main_4">प्राथमिक और माध्यमिक क्रम मूलशब्द भाग को किसी विशिष्ट मूल्य की पहली उपस्थिति पर जाने के लिए प्रयोग किया जा सकता है।</string>
+    <string name="tutorial_main_5">स्क्रीन के ऊपरी तरफ खोजें आंकड़ा कोष जाँच को सक्षम करता है।</string>
+    <string name="tutorial_settings_1">CSV या XLS फाइल आयात करने के लिए खेत चुनें।</string>
+    <string name="tutorial_settings_2">फ़ाइल चुनने के बाद, फ़ाइल पत्रभाग स्क्रीन की बाईं तरफ सूचीबद्ध किए गए है और उनके आंकड़ा प्रकार को रूप दाईं तरफ दिया जा सकता है। फाइल में तीन पत्रभाग जरूरी हैं: अद्वितीय पहचानकर्ता, प्राथमिक क्रम, और माध्यमिक क्रम।</string>
+    <string name="tutorial_settings_3">नई विशेषताएँ जोड़ने या आयात करने के लिए विशेषताएँ दबाएँ।</string>
+    <string name="tutorial_settings_4">आंकड़े एकत्र करने की तैयारी के लिए रूपरचना मेनू चुनें</string>
+    <string name="tutorial_settings_5">"रूपरचना स्क्रीन में: 'व्यक्ति' आंकड़े एकत्र करने वाले व्यक्ति का नाम है, 'स्थान' खेत निर्देशांक जमा करता है, 'विशेषताएँ' सक्रिय विशेषताओं का समायोजन करने की अनुमति देता है, और 'सुचना पट्टिआं' मुख्य स्क्रीन पर प्रसंगाधीन प्रविष्टि की सुचना देती हैं"</string>
+    <string name="tutorial_settings_6">"जब आंकड़े आयात हो जाते हैं, तो मुख्य स्क्रीन पर जाने के लिए ऊपरी बाईं तरफ 'पीछे' बटन का प्रयोग किया जाता है।"</string>
+    <string name="tutorial_traits_1">"मेनू पर 'विशेषता जोड़ें' नई विशेषता का सिरजन करता है। एक समय पर कीबोर्ड और मदद का उपयोग नहीं किया जा सकता। आंकड़े एकत्र करने के लिए विभिन्न संरूप मौजूद है।"</string>
+    <string name="tutorial_traits_2">विशेषता फाइलें आयात करने के लिए मेन्यू बटन दबाएं और आयात चुनें।</string>
+    <string name="tutorial_traits_3">विशेषता निर्माण के बारे में अतिरिक्त जानकारी के लिए एप्लिकेशन मैन्युअल देखें।</string>
+    <string name="warning_field_before_traits">विशेषताएँ सिरजने से पहले खेत आयात होना जरूरी है।</string>
+    <string name="warning_field_missing">कोई खेत ग्रहण नहीं किया गया है। आंकड़े एकत्र करने से पहले कृपया खेत ग्रहण करें।</string>
+    <string name="warning_traits_missing">कोई विशेषता मौजूद नहीं है। कृपया आंकड़े एकत्र करने से पहले विशेषताओं का सिरजन करें।</string>
+    <string name="database_reset">आंकड़ा कोष पुनः तैयार करें</string>
+    <string name="database_reset_warning1">पुनः तैयारी पर सभी आंकड़े मिटा दिए जाएँगे। क्या आप यही चाहते हैं?</string>
+    <string name="database_reset_warning2">इस क्रिया को उल्टा नहीं जा सकता। एप्लिकेशन आंकड़ा कोष को साफ करने के बाद बंद हो जाएगी। क्या आप अभी भी यही चाहते हैं?</string>
+    <string name="database_dialog_title">आंकड़ा कोष</string>
+    <string name="database_reset_message">आंकड़ा कोष मिटा दिया गया है</string>
+    <string name="database_import">आंकड़ा कोष आयात करें</string>
+    <string name="database_export">आंकड़ा कोष निर्यात करें</string>
+    <string name="export_format_title">संरूप</string>
+    <string name="export_content_columns_all">खेत के सभी पत्रभाग</string>
+    <string name="export_content_traits_all">सारी विशेषताएँ</string>
     <string name="traits_format_photo">फोटो</string>
     <string name="play">बजाएँ</string>
     <string name="capture">फोटो लें</string>
@@ -152,8 +152,8 @@
     <string name="fields_load">ग्रहण करें</string>
     <string name="traits_options_delete">मिटाएँ</string>
     <string name="fields_date_imported">आयातित तारीख</string>
-    <string name="exporttraiterror">निर्यात करने के लिए कोई आंकड़े मौजूद नहीं है</string>
-    <string name="tipsdesc">"क्या आप मदद सक्षम करना चाहते है? 'उच्च सेटिंग' में यह सेटिंग बदली जा सकती है।"</string>
+    <string name="export_error_data_missing">निर्यात करने के लिए कोई आंकड़े मौजूद नहीं है</string>
+    <string name="tutorial_dialog_description">"क्या आप मदद सक्षम करना चाहते है? 'उच्च सेटिंग' में यह सेटिंग बदली जा सकती है।"</string>
     <string name="dialog_cancel">रद्द करें</string>
     <string name="rangechime">प्राथमिक क्रम में बदलाव होने पर अधिसूचना ध्वनि</string>
     <string name="traits_create_photo_maximum">अधिक्तम फोटो संख्या</string>
