--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -16,9 +16,9 @@
     <string name="search_dialog_add">追加</string>
     <string name="search_dialog_clear">消去</string>
     <string name="dialog_close">閉じる</string>
-    <string name="minusday">-1 日</string>
+    <string name="trait_layout_date_minusday">-1 日</string>
     <string name="enter">入力</string>
-    <string name="plusday">+1 日</string>
+    <string name="trait_layout_date_plusday">+1 日</string>
     <string name="record">録音</string>
     <string name="dialog_ok">確定</string>
     <string name="stop">停止</string>
@@ -28,11 +28,11 @@
     <string name="genericerror">入力エラー</string>
     <string name="valueless">設定した最小値よりも小さい値です。</string>
     <string name="valuemore">設定した最大値よりも大きい値です。</string>
-    <string name="settings_changelog_title">変更履歴</string>
+    <string name="changelog_title">変更履歴</string>
     <string name="main_toolbar_moveto_no_match">適合する値がありません。</string>
     <string name="dialog_warning">警告</string>
-    <string name="exporterror">エクスポート中にエラーが生じました。</string>
-    <string name="exportcomplete">エクスポート完了</string>
+    <string name="export_error_general">エクスポート中にエラーが生じました。</string>
+    <string name="export_complete">エクスポート完了</string>
     <string name="profile_person_title">調査員の設定</string>
     <string name="profile_location_title">位置の設定</string>
     <string name="about_title">バージョン情報</string>
@@ -50,9 +50,9 @@
     <string name="profile_location_longitude">経度</string>
     <string name="profile_get_location">位置の取得</string>
     <string name="ignoreentries">入力済みエントリーを隠す。</string>
-    <string name="dbformat">データベース</string>
-    <string name="tableformat">表</string>
-    <string name="filename">ファイル名</string>
+    <string name="export_format_database">データベース</string>
+    <string name="export_format_table">表</string>
+    <string name="export_file_name">ファイル名</string>
     <string name="drop1">表示項目1</string>
     <string name="drop2">表示項目2</string>
     <string name="drop3">表示項目3</string>
@@ -64,13 +64,13 @@
     <string name="search_dialog_query_is_more_than">以上</string>
     <string name="search_dialog_query_is_less_than">以下</string>
     <string name="search_results_missing">検索結果はありません。</string>
-    <string name="importunique">識別番号</string>
-    <string name="importfirst">第一区分</string>
-    <string name="importsecond">第二区分</string>
-    <string name="importfields">圃場ファイルのインポート</string>
-    <string name="importmsg">しばらくお待ちください・・・</string>
-    <string name="importerror">インポート中にエラーが生じました。</string>
-    <string name="importuniqueerror">識別番号が重複しています。</string>
+    <string name="import_dialog_unique">識別番号</string>
+    <string name="import_dialog_primary">第一区分</string>
+    <string name="import_dialog_secondary">第二区分</string>
+    <string name="import_dialog_title">圃場ファイルのインポート</string>
+    <string name="import_dialog_importing">しばらくお待ちください・・・</string>
+    <string name="import_error_general">インポート中にエラーが生じました。</string>
+    <string name="import_error_unique">識別番号が重複しています。</string>
     <string name="traits_toolbar_add_trait">調査形質の追加</string>
     <string name="traits_create_format">フォーマット</string>
     <string name="traits_create_value_default">初期値</string>
@@ -97,48 +97,48 @@
     <string name="settings_advanced">高度な設定</string>
     <string name="traits_create_categories_text">各項目はスラッシュ（/）で区切ってください。</string>
     <string name="main_infobar_no_data">データがありません。</string>
-    <string name="noexportcheck">エクスポートの種類を選択してください。</string>
+    <string name="export_error_missing_format">エクスポートの種類を選択してください。</string>
     <string name="search_results_dialog_title">検索結果</string>
-    <string name="tips">チュートリアルを利用する。</string>
+    <string name="preferences_interface_tutorial">チュートリアルを利用する。</string>
     <string name="cycle">最後の調査形質から次のエントリーの最初の調査形質に移動する。</string>
     <string name="useday">日付の代わりに1月1日からの累積日数を用いる。</string>
-    <string name="columnfail">列名に使えない文字列が含まれています。</string>
-    <string name="prev">前へ</string>
-    <string name="next">次へ</string>
-    <string name="stored">データは保存されました。</string>
+    <string name="import_error_columns">列名に使えない文字列が含まれています。</string>
+    <string name="tutorial_previous">前へ</string>
+    <string name="tutorial_next">次へ</string>
+    <string name="trait_layout_data_stored">データは保存されました。</string>
     <string name="traits_create_optional">オプション</string>
-    <string name="exportmsg">エクスポート中・・・</string>
+    <string name="export_progress">エクスポート中・・・</string>
     <string name="english">English</string>
     <string name="spanish">Español (México)</string>
     <string name="german">Deutsch</string>
-    <string name="tutorial">チュートリアル</string>
-    <string name="mhelp1">スクリーン上部の「表示項目」に各エントリーの追加情報を表示できます。これらは「設定」メニューで変えることができます。</string>
-    <string name="mhelp2">エントリー間は大きな黒い矢印を押すと移動できます。形質間は小さな青い矢印で移動します。</string>
-    <string name="mhelp3">「有効な調査形質」ボタンを押すと利用可能な調査形質の一覧が表示されます。</string>
-    <string name="mhelp4">第一および第二区分に直接入力すると、その値が最初に現れるエントリーまで移動できます。</string>
-    <string name="mhelp5">スクリーン上部の「検索」からデータベースの検索ができます。</string>
-    <string name="shelp1">ファイルを選択して、CSVあるいはXLSファイルをインポートします。</string>
-    <string name="shelp2">ファイルを選択すると列名のリストが左側に表示され、各列のタイプを右側で設定できます。ファイルには識別番号、第一区分、第二区分の3つの列が最低限必要です。</string>
-    <string name="shelp3">「調査形質」を押して、新しい形質の追加やインポートを行います。</string>
-    <string name="shelp4">「設定」を選択して、データ収集の準備をします。</string>
-    <string name="shelp5">設定画面では、調査員の氏名、収集場所、調査形質の設定、メイン画面の表示項目の設定ができます。</string>
-    <string name="shelp6">データのインポートが完了したら、左上の「戻る」ボタンを押してメイン画面に移動します。</string>
-    <string name="thelp1">メニューの「調査形質の追加」で、新しい形質を作成できます。キーボードとチュートリアルは同時に使用できません。形質データはいくつかの異なるフォーマットで収集できます。</string>
-    <string name="thelp2">メニューボタンから「インポート」を選ぶと、形質ファイルがインポートできます。</string>
-    <string name="thelp3">調査形質を作成する場合の詳しい情報はアプリのマニュアルをご覧ください。</string>
-    <string name="importtraitwarning">圃場ファイルは調査形質を作成する前にインポートしておいてください。</string>
-    <string name="nofieldloaded">圃場データがありません。調査を開始する前に圃場ファイルを読み込んでください。</string>
-    <string name="notraitloaded">調査形質のデータがありません。調査を開始する前に形質データを作成してください。</string>
-    <string name="dbreset">データベースのリセット</string>
-    <string name="resetwarning1">リセットにより全てのデータが削除されます。よろしいですか？</string>
-    <string name="resetwarning2">この作業は戻れません。データベースを消去した後、アプリは終了します。続けますか？</string>
-    <string name="dbbackup">データベース</string>
-    <string name="resetcomplete">データベースは削除されました。</string>
-    <string name="dbimport">データベースのインポート</string>
-    <string name="dbexport">データベースのエクスポート</string>
-    <string name="headerformat">フォーマット</string>
-    <string name="allcolumns">圃場ファイルの全ての列</string>
-    <string name="alltraits">全ての調査形質</string>
+    <string name="tutorial_dialog_title">チュートリアル</string>
+    <string name="tutorial_main_1">スクリーン上部の「表示項目」に各エントリーの追加情報を表示できます。これらは「設定」メニューで変えることができます。</string>
+    <string name="tutorial_main_2">エントリー間は大きな黒い矢印を押すと移動できます。形質間は小さな青い矢印で移動します。</string>
+    <string name="tutorial_main_3">「有効な調査形質」ボタンを押すと利用可能な調査形質の一覧が表示されます。</string>
+    <string name="tutorial_main_4">第一および第二区分に直接入力すると、その値が最初に現れるエントリーまで移動できます。</string>
+    <string name="tutorial_main_5">スクリーン上部の「検索」からデータベースの検索ができます。</string>
+    <string name="tutorial_settings_1">ファイルを選択して、CSVあるいはXLSファイルをインポートします。</string>
+    <string name="tutorial_settings_2">ファイルを選択すると列名のリストが左側に表示され、各列のタイプを右側で設定できます。ファイルには識別番号、第一区分、第二区分の3つの列が最低限必要です。</string>
+    <string name="tutorial_settings_3">「調査形質」を押して、新しい形質の追加やインポートを行います。</string>
+    <string name="tutorial_settings_4">「設定」を選択して、データ収集の準備をします。</string>
+    <string name="tutorial_settings_5">設定画面では、調査員の氏名、収集場所、調査形質の設定、メイン画面の表示項目の設定ができます。</string>
+    <string name="tutorial_settings_6">データのインポートが完了したら、左上の「戻る」ボタンを押してメイン画面に移動します。</string>
+    <string name="tutorial_traits_1">メニューの「調査形質の追加」で、新しい形質を作成できます。キーボードとチュートリアルは同時に使用できません。形質データはいくつかの異なるフォーマットで収集できます。</string>
+    <string name="tutorial_traits_2">メニューボタンから「インポート」を選ぶと、形質ファイルがインポートできます。</string>
+    <string name="tutorial_traits_3">調査形質を作成する場合の詳しい情報はアプリのマニュアルをご覧ください。</string>
+    <string name="warning_field_before_traits">圃場ファイルは調査形質を作成する前にインポートしておいてください。</string>
+    <string name="warning_field_missing">圃場データがありません。調査を開始する前に圃場ファイルを読み込んでください。</string>
+    <string name="warning_traits_missing">調査形質のデータがありません。調査を開始する前に形質データを作成してください。</string>
+    <string name="database_reset">データベースのリセット</string>
+    <string name="database_reset_warning1">リセットにより全てのデータが削除されます。よろしいですか？</string>
+    <string name="database_reset_warning2">この作業は戻れません。データベースを消去した後、アプリは終了します。続けますか？</string>
+    <string name="database_dialog_title">データベース</string>
+    <string name="database_reset_message">データベースは削除されました。</string>
+    <string name="database_import">データベースのインポート</string>
+    <string name="database_export">データベースのエクスポート</string>
+    <string name="export_format_title">フォーマット</string>
+    <string name="export_content_columns_all">圃場ファイルの全ての列</string>
+    <string name="export_content_traits_all">全ての調査形質</string>
     <string name="traits_format_photo">写真</string>
     <string name="play">再生</string>
     <string name="capture">画面の保存</string>
@@ -152,8 +152,8 @@
     <string name="fields_load">読み込み</string>
     <string name="traits_options_delete">削除</string>
     <string name="fields_date_imported">インポートされたデータ</string>
-    <string name="exporttraiterror">エクスポートするデータがありません。</string>
-    <string name="tipsdesc">チュートリアルを使用しますか？この設定は「高度な設定」で変更できます。</string>
+    <string name="export_error_data_missing">エクスポートするデータがありません。</string>
+    <string name="tutorial_dialog_description">チュートリアルを使用しますか？この設定は「高度な設定」で変更できます。</string>
     <string name="dialog_cancel">キャンセル</string>
     <string name="rangechime">第一区分が変わったときに音声でお知らせします。</string>
     <string name="traits_create_photo_maximum">画像の最大数</string>
